--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -102,4 +102,86 @@ RTT越大，在收到确认之前，可以发送的数据越多
 RTT = 2*传播时延+末端处理时间
 ### 利用率
 1. 信道利用率 = 有数据通过的时间/（有+无）数据通过时间
-2. 网络利用率 = 信道利用率甲醛平均值
+2. 网络利用率 = 信道利用率加权平均值
+## 分层结构
+### 分层的基本原则
+服务：每两层之间提供的东西，上层是使用下层服务，下层为上层服务
+分层的基本原则：
+1. 各层之间相互独立，每层只实现一种相对独立的功能
+2. 每层之间的界限自然清晰，易于理解，相互交流尽可能少
+3. 结构上可分割开。每层都采用最适合的技术来实现
+4. 保持下层对上层的独立性，上层单向使用下层提供的服务
+5. 整个分层结构应该能促进标准化工作
+### 分层中的概念
+1. 实体：第n层中的活动元素称为n层实体
+2. 对等实体：同一层的实体
+3. 协议：对进行网络中的对等实体数据交换而建立的规则、标准或约定（水平的）
+协议三要素：语法（传输数据的格式）；语义（规定所要完成的功能）；同步（规定各种操作顺序）
+4. 接口（访问服务店SAP）：上层使用下层服务的入口
+5. 服务：下层为响铃上层提供的功能调用（单向、垂直）
+6. SDU（服务数据单元）：为完成用户所要求的的功能而应传送的数据
+7. PCI（协议控制信息）：控制协议操作的信息
+8. PDU（协议数据单元）：对等层次之间传送的数据单元
+9. 计算机网络体系结构是计算机网络的各层及其协议的集合
+## 计算机网络分层结构
+### OSI参考模型
+法定标准；7层
+目的：支持异构网络体系的互联互通
+自下而上：物理层、数据链路层、网络层、传输层、会话层、表示层、应用层
+通信子网（数据通信）：物理层、数据链路层、网路层
+资源子网（数据处理）：应用层、表示层、会话层
+#### 应用层
+用户与网络的界面，所有能和用户交互产生网络流量的程序
+常见应用层服务：文件传输（FTP）、电子邮件（SMTP）、万维网（HTTP）
+#### 表示层
+用于处理再两个通信系统中交换信息的表示方式（语法和语义）
+功能：
+1. 数据格式变换
+2. 数据加密解密
+3. 数据压缩和恢复
+#### 会话层
+像表示层实体/用户进程提供简历连接并在连接上有序地传输数据，会话，也是建立同步
+会话之间彼此独立互不影响
+功能：
+1. 建立、管理、终止会话
+2. 使用校验点可使会话在通信失效时从校验点（同步点）继续恢复通信，实现数据同步
+主要协议：ADSP、ASP
+#### 传输层
+负责主机中两个进程的通信，即端到端的通信。传输单位是报文段或用户数据报
+功能：
+1. 可靠传输（有确认机制）、不可靠传输
+2. 差错控制
+3. 流量控制
+4. 复用分用
+主要协议：TCP、UDP
+#### 网络层
+把分组从源端传到目的端，为分组交换网上的不同主机提供通信服务
+网络层的传输单位是数据报
+功能：
+1. 路由选择
+2. 流量控制
+3. 差错控制
+4. 拥塞控制
+主要协议：IP、IPX等
+#### 数据链路层
+把网络层传下来的数据报组装成帧
+传输单位：帧
+功能：
+1. 成帧（定义帧的开始和结束）
+2. 差错控制（帧错、位错）
+3. 流量控制
+4. 访问（接入）控制，控制对信道的访问
+主要协议：SDLC、HDLC、PPP、STP
+#### 物理层
+物理媒体上实现比特流的透明传输
+传输单位：比特
+透明传输：不管所传数据是怎样的比特组合都应当能在链路上传送
+功能：
+1. 定义接口特性
+2. 定义传输模式
+3. 定义传输速率
+4. 比特同步
+5. 比特编码
+主要协议：Rj45、802.3
+### TCP/IP参考模型
+事实标准；4层
