--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -125,7 +125,7 @@ RTT = 2*传播时延+末端处理时间
 9. 计算机网络体系结构是计算机网络的各层及其协议的集合
 ## 计算机网络分层结构
 ### OSI参考模型
-法定标准；7层
+法定标准；7层（物联网淑惠试用）
 目的：支持异构网络体系的互联互通
 自下而上：物理层、数据链路层、网络层、传输层、会话层、表示层、应用层
 通信子网（数据通信）：物理层、数据链路层、网路层
@@ -185,3 +185,114 @@ RTT = 2*传播时延+末端处理时间
 主要协议：Rj45、802.3
 ### TCP/IP参考模型
 事实标准；4层
+#### 网络接口层
+HTTP、FTP、DNS
+#### 网际层
+**TCP**、UDP
+#### 传输层
+**IP**、IP
+#### 应用层
+Ethernet、ATM、Frame Relay
+#### 与OSI的异同
+相同点：
+1. 都分层
+2. 基于独立的协议栈的改线
+3. 可以实现异构网络互联
+不同点：
+1. OSI定义三点：服务、协议、接口
+2. OSI先出现，参考模型先于协议发明，不偏向特定协议
+3. TCP/IP设计之初就考虑到异构网互联问题，将IP作为重要层次
+4. 连接方式：TCP/IP特别看重异构网互联，所以网络层为无连接，而不是面向连接
+PS：面向连接（有确认过程的信息传输），无连接（直接传输）
+### 5层参考模型
+综合了OSI和TCP/IP的有点
+#### 应用层
+支持各种网络应用
+#### 传输层
+进程-进程的数据传输
+#### 网路层
+源主机到目的主机的数据分组路由与转发
+#### 数据链路层
+把网络层传下来的数据报组装成帧
+#### 物理层
+比特传输
+![QQ截图20200920121251.jpg](https://i.loli.net/2020/09/20/oUgH9NATh4PCOLY.jpg)
+
+# 物理层
+1. 通信基础
+2. 两个公式lim
+3. 看图说话
+4. 传输介质
+5. 物理层设备
+## 物理层基本概念
+1. 物理层解决如何在连接各种计算机的传输媒体上**传输数据比特流**，而不是指具体的传输媒体
+2. 物理层主要任务：确定与传输媒体接口有关的一些特性
+3. 机械特性：定义物理接连的特性
+4. 电气特性：规定传输二进制位时，线路上信号的电压范围、阻抗匹配、传输速率和距离限制等
+5. 功能特性：指明某条线上出现的某一电平表示何种意义，接口部件的信号线的用途
+6. 过程特性：定义各条物理线路的工作规程和时序关系
+## 数据通信基础知识
+1. 通信目的：传送消息
+2. 数据：传送信息的实体，通常是有意义的符号序列
+3. 信号：数据的电器/电磁的表现，是数据在传输过程中的存在形式
+    * 数字信号：代表消息的参数取值是离散的
+    * 模拟信号：代表信息的参数取值是连续的
+4. 信源：产生和发送数据的源头
+5. 信宿：接受数据的终点
+6. 信道：信号的传输媒介
+7. 三种通信方式：单工通信、半双工通信（不能同时发收）、全双工通信
+8. 两种数据传输方式：串行传输（速度慢、费用低、适合远距离）、并行传输（速度快、费用高、适合近距离）
+## 码元
+1. 码元：一个固定时长的信号波形，代表不同离散数值的基本波形，是阿虎I通信中数字信号的计量单位
+2. 码元宽度：码元的时长
+3. 当码元的离散状态有M个时，称为M进制码元
+4. 1码元可以携带多个比特的信息量
+## 速率、波特、带宽
+1. 速率也叫数据率，指数据的传输速率，代表单位时间内容传输的数据量
+2. 可以用码元传输速率和信息传输速率表示
+3. 码元传输速率：1s传输多少码元，表示单位时间内数字通信系统所传输的码元个数（脉冲个数、信号变化次数）。又称码元速率、波形速率、调制速率、符号速率。单位波特（Baud）
+4. 信息传输速率：1s传输多少比特，表示单位时间内容数字通信系统传输的二进制码元个数（比特数）。又称信息速率、比特率。单位是比特/秒（b/s）
+5. 带宽：表示带单位时间内从网络中的某一点到另一点所能通过的“**最高数据率**”
+## 奈氏准则和香农定理
+1. 影响失真程度的因素：码元传输速率；信号传输距离；噪声干扰；传输媒体质量
+2. 信道带宽：信道能通过的最高频率和最低频率之差
+3. 码间串扰：接收端收到的信号波形失去了码元之间清晰界限的现象
+4. 奈氏准则给出了码元传输速率的限制，但没有对信息传输速率给出限制
+5. 香农定理：在带宽受限且有噪声的信道中，为了不产生误差，信息的传输速率有上限值
+## 编码与调制
+### 系带信号与宽带信号
+1. 基带信号：将数字信号用两种不同的电压表示送到数字信道上传输（基带传输）
+2. 宽带信号：将基带信号进行调制后形成的频分复用模拟信号，再传送到模拟信号上去传输（宽带传输）
+## 编码
+数据变为数字信号
+### 数字数据编码为数字信号
+1. 非归零编码（NRZ）
+2. 曼切斯特编码
+3. 差分曼切斯特编码
+### 模拟数据编码为数字信号
+1. PCM：抽样、量化、编码
+## 调制
+数据变为模拟信号
+### 数字数据调制为模拟信号
+1. ASK(调幅)
+2. FSK(调频)
+3. PSK(调相)
+4. QAM(调幅+调相)
+### 模拟数据调制为模拟信号
+## 物理层传输介质
+传输介质：数据传输系统中在发送设备和接受设备之间的物理通路，也称传输媒体/传输媒介
+### 导向性传输介质
+1. 双绞线，绞合可以减少对相邻导线的电磁干扰
+2. 同轴电缆
+3. 光纤
+### 非导向性传输介质
+1. 无线电波
+2. 微波
+3. 红外线、激光
+## 物理层设备
+### 中继器
+对信号进行再生和还原，再生数字信号
+5-4-3规则：最多5个网段、最多4个物理层设备、最多挂3个计算机
+### 集线器（多口中继器）
+对信号进行放大转发，再生，放大信号
+不具备信号的定向传送能力，是一个共享性设备
