--- a/Computer Basics/Data Structures and Algorithms/大话数据结构.md
+++ b/Computer Basics/Data Structures and Algorithms/大话数据结构.md
@@ -317,3 +317,69 @@ while (0 < n):
 ### 递归定义
 递归函数：把一个直接调用自己或通过一系列的调用语句间接地调用自己的函数
 每个递归定义必须至少有一个条件，满足时递归不再进行，即不再引用自身而是返回值退出
+## 栈的应用——四则运算表达式
+### 后缀表示法
+所有的符号都是在要运算数字的后面出现
+### 后缀表达式计算结果
+从左到右遍历表达式的每个数字和符号，遇到是数字就进栈，遇到是符号，就将处于栈顶两个数字出栈，进行运算，运算结果进钱，一直到最终获得结果。
+### 中缀表达式转后缀表达式
+从左到右遍历中缀表达式的每个数字和符号，若是数字就输出，即成为后缀表达式的一部分；若是符号，则判断其与栈顶符号的优先级，是右括号或优先级低于栈顶符号(乘除优先加减)则栈顶元素依次出栈并输出，并将当前符号进栈，一直到最终输出后缀表达式为止
+## 队列的定义
+1. 只允许在一端进行插入操作，而在另一端进行删除操作的线性表
+2. 队列是一种先进先出（First In First Out）的线性表，简称FIFO
+3. 允许插入的一端称为队尾，允许删除的一端称为队头
+## 循环队列
+### 队列顺序存储的不足
+入列元素时间复杂度为O(1)，但出列元素的时间复杂度为O(n)
+### 循环队列定义
+头尾相接的顺序存储结构
+判断队列空满：
+1. 设置一个标志变量flag，当front== rear，且flag= 0时为队列空，当front== rear，且flag= 1时为队列满
+2. 当队列空时front =rear，；当队列满时修改条件保留一个元素，条件为(rear + 1) % QueueSize == front（QueueSize为队列最大尺寸）
+## 队列的链式存储结构及实现
+队列的链式存储结构，其实就是线性表的单链表，只不过它只能尾进头出而已，简称为链队列
+### 入队操作
+链表尾部插入结点
+### 出队操作
+头结点的后继结点出队，把头结点的后继改成它后面的结点
+若链表除头结点外只剩一个元素时，将rear指向头结点
+### 与循环队列比较
+1. 时间上，基本操作都是O(1)，链队列每次申请和释放结点存在一些时间开销
+2. 空间上，循环队列必须有固定长度，有存储元素个数和空间浪费的问题
+3. 确定列表长度最大值时使用循环队列；无法预估队列长度时使用链队列
+
+# 串
+## 串的定义
+1. 串（string）是由零个或多个字符组成的有限序列，又名字符串
+2. 串的长度：串中字符的数目n
+3. 空串：零个字符的串
+4. 空格串：只含空格的串
+5. 子串：传中任意个数的连续字符组成的子序列
+5. 主串：包含子串的串
+6. 子串在主串中的位置就是子串的第一个字符在主串中的位置
+## 串的比较
+串的比较是通过组成串的字符之间的编码来进行的
+必须串的长度以及它们各个对应位置的字符都相等时才算两串相等
+1. 前序字符都相等，长串大
+2. 第一个不相同字符编码大的串大
+## 串的存储结构
+### 串的顺序存储结构
+用一组地址连续的存储单元来存储串中的字符序列
+### 串的链式存储结构
+一个结点存放多个字符，最后一个结点若是未被占满，可以用#或者其他非串值字符补全
+串的链式存储结构处理在连接串与串操作时有一定方便外，总得来说不如顺序存储灵活，性能也不如顺序存储结构好
+## 朴素的模式匹配算法
+1. 模式匹配：子串的定位操作
+2. 算法：对主串的每一个字符作为子串开头，与要匹配的字符串进行匹配。对主串做大循环，每个字符开头做T的长度的小循环，直到匹配成功或全部遍历完成为止
+**算法重现**
+时间复杂度O((n-m+1)*m)
+## KMP模式匹配算法
+### KMP模式匹配算法原理
+i不回溯（不大懂为什么）
+### next数组值推导
+前后缀n个字符相等k = n + 1
+**算法重现**
+时间复杂度O(n+m)
+### KMP模式匹配算法改进
+对next函数改进nextval
+a为字符与它next值指向的b位字符相等，则a的nextval就等于b位的nextval值；否则则为自身的next值
