--- a/Computer Basics/Data Structures and Algorithms/大话数据结构.md
+++ b/Computer Basics/Data Structures and Algorithms/大话数据结构.md
@@ -383,3 +383,145 @@ i不回溯（不大懂为什么）
 ### KMP模式匹配算法改进
 对next函数改进nextval
 a为字符与它next值指向的b位字符相等，则a的nextval就等于b位的nextval值；否则则为自身的next值
+
+# 树
+## 树的定义
+1. 一对多的数据结构
+2. 树(Tree)是n个结点的有限集。n=O时称为空树.在任意一棵非空树中
+   * 有旦仅有**一个**特定的称为根(Root)的结点
+   * 当n>1时，其余结点可分为m(m>O)个**互不相交**的有限集，其中每一个集合本身又是一棵树，并且称为根的子树(SubTree)。
+3. n>0时根节点是唯一的，不可能村阿紫多个根节点
+4. m>0时子树的个数没有限制，但它们一定是互不相交的
+### 结点分类
+1. Degree：结点的度，结点拥有的子树数
+2. Leaf：叶节点、终端结点，度为0的结点
+3. 分支节点：非终端结点
+4. 内部结点： 除去根节点的分支节点
+5. 树的度：树内各节点度的最大值
+### 结点间关系
+1. 孩子：结点的子树的根称为结点的孩子
+2. 双亲：结点为结点孩子的双亲
+3. 兄弟：同一双亲的孩子之间互称兄弟
+4. 祖先：结点的祖先是从根到该节点所经分支上的所有结点
+5. 子孙：以某结点为根的子树中的任一结点都是该节点的子孙
+### 树的其他相关概念
+1. Level：层次，从根开始定义起，根为第一层，根的孩子为第二层
+2. Depth：深度、高度，树中结点的最大层次
+3. 有序树、无序树：若树中结点的各子树从左至右有次序，不能互换则为有序树；否则为无序树
+4. Forest：森林，m棵互不相交的树的集合
+## 树的存储结构
+### 双亲表示法
+每个结点中附设一个指示器指示双亲结点到链表中的位置
+不容易找结点的孩子
+有时附设长子域或右兄弟域
+### 孩子表示法
+每个结点有多个指针域，其中每个指针指向一棵子树的根结点，多重链表示法
+把每个结点的孩子结点排列起来，以单链表作存储结构，则n个结点有n个孩子链表，如果是叶子结点则此单链表为空。然后n个头指针又组成一个线性衰，采用顺序存储结构，存放进一个一维数组中
+### 孩子兄弟表示法
+任意一棵树，它的结点的第一个孩子如果存在就是唯一的，它的右兄弟如果存在也是唯一的。因此，我们设置两个指针，分别指向该结点的第一个孩子和此结点的右兄弟
+## 二叉树的定义
+二叉树(Binary Tree)是n个结点的有限集合，该集合或者为空集(称为空二叉树)，或者由一个根结点和两棵互不相交的、分别称为根结点的**左子树**和**右子树**的二叉树组成。
+### 二叉树特点
+1. 每个结点最多有两棵子树，没有子树或者由一棵子树都是可以的
+2. 左子树和右子树是有顺序的，次序不能任意颠倒
+3. 即使树中某结点只有一棵子树，也要区分它是左子树还是右子树
+### 特殊二叉树
+1. 斜树：所有的结点都只有左子树的二叉树叫左斜树。所有结点都是只有右子树的二叉树叫右斜树。这两者统称为斜树
+2. 满二叉树：在一棵二叉树中，如果所有分支结点都存在左子树和右子树，并且所有叶子都在同一层上，这样的二叉树称为满二叉树
+    * 叶子只能出现在最下一层。出现在其他层就不可能达成平衡
+    * 非叶子结点的度一定是2
+    * 在同样深度的二叉树中，满二叉树的结点个数最多，叶子数最多。
+3. 完全二叉树：对一棵具有n个结点的二叉树按层序编号，如果编号为i的结点与同样深度的满二叉树中编号为i的结点在二叉树中位置完全相同，则这棵二叉树称为完全二叉树
+    * 叶子结点只能出现在最下两层
+    * 最下层的叶子一定集中在左部连续位置
+    * 倒数二层，若有叶子结点，一定都在右部连续位
+    * 如果结点度为1，则该结点只有左孩子，即不存在只有右子树的情
+    * 同样结点数的二叉树，完全二叉树的深度最小
+## 二叉树的性质
+1. 在二叉树的第i层上至多有2^(i-1)个结点(i>=1)
+2. 深度为k的二叉树至多有2^k-1个结点(k>=l)
+3.  对任何一棵二叉树T，如果其终端结点数为n0，度为2的结点数为n2,则n0=n2+1
+4. 具有n个结点的完全二叉树的深度为[ logn ]+ 1 ([ x ]表示不大于直的最大整数)(log以2为底)
+5. 如果对一棵有n个结点的完全二叉树的结点按层序编号，对任一结点i：
+    * 如果i=1，则结点i是二叉树的棍，无双亲;如果i>1，则其双亲是结点[ i/2 ]
+    * 如果2i>n，则结点i无左孩子(结点i为叶子结点);否则其左孩子是结点2i
+    * 如果2i+1>n，则结点i无右孩子;否则其右孩子是结点2i+1
+## 二叉树的存储结构
+### 二叉树的顺序存储结构
+按顺序存储，将不存在的结点设置为^即可
+### 二叉链表
+设计一个数据域和两个指针域
+## 历遍二叉树
+二叉树的遍历(traversing binary tree)是指从根结点出发，按照某种**次序**依次访问二叉树中所有结点.使得每个结点被**访问**一次且仅被访问一次
+### 前序历遍
+规则是若二叉树为空，则空操作返回，否则先访问根结点，然后前序遍历左子树，再前序遍历右子树
+```c++
+void InOrderTraverse (BiTree T) 
+{
+    if (T==NllLL)
+        return;
+    printf ("%c"，T→data);
+    InOrderTraverse (T->lchild);
+    lnOrderTraverse (T->rchild);
+}
+```
+### 中序历遍
+规则是若树为空，则空操作返回，否则从根结点开始(注意并不是先访问根结点)，中序遍历根结点的左子树，然后是访问根结点，最后中序遍历右子树
+```c++
+void InOrderTraverse (BiTree T) 
+{
+    if (T==NllLL)
+        return;
+    InOrderTraverse (T->lchild) ;
+    printf ("%c"，T→data);
+    lnOrderTraverse (T->rchild) ;
+}
+```
+### 后序遍历
+规则是若树为空，则空操作返回，否则从左到右先叶子后结点的方式遍历访问左右子树，最后是访问根结点
+```c++
+void InOrderTraverse (BiTree T) 
+{
+    if (T==NllLL)
+        return;
+    InOrderTraverse (T->lchild);
+    lnOrderTraverse (T->rchild);
+    printf ("%c"，T→data);
+}
+```
+### 层序遍历
+规则是若树为空，则空操作返回，否则从树的第一层，也就是根结点开始访问，从上而下逐层遍历，在同一层中，按从左到右的颇用才结点逐个访问
+### 二叉树遍历性质
+1. 己知前序遍历序列和中序遍历序列，可以唯一确定一棵二叉树
+2. 已知后序遍历序列和中序遍历序列，可以唯一确定一棵二叉树
+3. 已知前序和后序遍历，不能确定一棵二叉树
+## 二叉树的建立
+建立二叉树，也是利用了递归的原理。只不过在原来应该是打印结点的地方，改成了生成结点、给结点赋值的操作
+## 线索二叉树
+指向前驱和后继的指针称为线索，加上线索的二叉链表称为线索链表，相应的二叉树就称为线索二叉树(Threaded Binary Tree)
+## 树、森林与二叉树的转换
+### 树转换为二叉树
+1. 加线：在所有兄弟结点之间加一条连线
+2. 去线：对树中每个结点，只保留它与第一个孩子结点的连线，删除色与其他孩子结点之间的连线
+3. 层次调整：以树的根结点为轴心，将整棵树顺时针旋转一定的角度，使之结构层次分明。注意第一个孩子是二叉树结点的左孩子，兄弟转换过来的孩子是结点的右孩子
+### 森林转换为二叉树
+1. 把每个树转换为二叉树
+2. 第一棵二叉树不动，从第二棵二叉树开始，依次把后一棵二叉树的根结点作为前一棵二叉树的根结点的右孩子，用线连接起来。当所有的二叉树连接起来后就得到了由森林转换来的二叉树
+### 二叉树转换为树
+1. 加线：将该结点与这些右孩子结点用线连接起
+2. 去线：删除原二叉树中所有结点与其右孩子结点的连线
+3. 层次调整
+### 二叉树转换成森林
+1. 从根结点开始，若右孩子存在，则把与右孩子结点的连线删除，直到所有右孩子连线都删除为止，得到分离的二叉树
+2. 再将每棵分离后的二叉树转换为树即可
+### 树与森林的遍历
+#### 树的遍历
+1. 先访问树的根节点，以次先根遍历根的每棵子树
+2. 另一种是后根遍历，即先依次后根遍历每棵子树，然后再访问根结点
+#### 森林遍历
+1. 前序遍历：先访问森林中第一棵树的根结点，然后再依次先根遍历根的每棵子树，再依次用同样方式遍历除去第一棵树的剩余树构成的森林
+2. 后序遍历：是先访问森林中第一棵树，后根遍历的方式遍历每棵子树，然后再访问根结点，再依次同样方式遍历除去第一棵树的剩余树构成的森林
+## 赫夫曼树及其应用
+从树中一个结点到另一个结点之间的分支构成两个结点之间的路径，路径上的分支数目称做路径长度
+树的路径长度就是从树根到每一结点的路径长度之和
+赫夫曼树：最优二叉树，带权路径长度WPL最小的二叉树
