--- a/Computer Basics/Data Structures and Algorithms/大话数据结构.md
+++ b/Computer Basics/Data Structures and Algorithms/大话数据结构.md
@@ -371,7 +371,23 @@ while (0 < n):
 ## 朴素的模式匹配算法
 1. 模式匹配：子串的定位操作
 2. 算法：对主串的每一个字符作为子串开头，与要匹配的字符串进行匹配。对主串做大循环，每个字符开头做T的长度的小循环，直到匹配成功或全部遍历完成为止
-**算法重现**
+```python
+def Pattern_matching(str_1 , str_2):
+    i = p = 0
+    while i<len(str_1):
+        i = p
+        j = 0
+        while j<len(str_2):
+            if str_1[i] == str_2[j]:
+                i += 1
+                j += 1
+            else:
+                break
+        if j == len(str_2):
+            print(p)
+            break
+        p += 1
+```
 时间复杂度O((n-m+1)*m)
 ## KMP模式匹配算法
 ### KMP模式匹配算法原理
@@ -525,3 +541,32 @@ void InOrderTraverse (BiTree T)
 从树中一个结点到另一个结点之间的分支构成两个结点之间的路径，路径上的分支数目称做路径长度
 树的路径长度就是从树根到每一结点的路径长度之和
 赫夫曼树：最优二叉树，带权路径长度WPL最小的二叉树
+
+# 图
+## 图的定义
+图（Graph）是由顶点的有穷非空集合和顶点之间边的集合组成，通常表示为:G（V,E），其中，G表示一个图，V是图G中顶点的集合，E是图G中边的集合。
+1. 数据元素：
+    图：顶点（Vertex）
+    线性表：元素
+    树：结点
+2. 图结构中不允许没有顶点，不存在空图
+3. 数据元素关系：
+    图：任意两个顶点之间都可能有关系，顶点之间的逻辑关系用边来表示，边集可以是空集
+    线性表：相邻的数据元素之间具有线性关系
+    树：相邻两层的结点具有层次关系
+### 图的相关定义
+1. 无向边：若顶点V1iVj之间的边没有方向，则称这条边为无向边(Edge)，用无序偶对(Vi,Vj)来表示
+2. 无向图（Undirected graphs）：图中任意两个顶点之间的边都是无向边
+3. 有向边：若从顶点Vi到Vj的边有方向，则称这条边为有向边，也称为弧（Arc），用有序偶< Vi,Vj >来表示
+4. 弧尾（Tail）：< Vi,Vj >中Vi
+5. 弧头（Head）：< Vi,Vj >中Vj
+6. 有向图（Directed graphs）：图中任意两个顶点之间的边都是有向边
+7. 简单图：图中不存在顶点到自身的边，且同一条边不重复出现
+8. 无向完全图：任意两个顶点之间都存在边的无向图
+9. 有向完全图：任意两个顶点之间都存在方向互为相反的两条弧的有向图
+10. 稀疏图：边或弧很少的图
+11. 稠密图：边或弧很多的图
+12. 权（Weight）：与图的边或弧相关的数
+13. 网（Network）：带权的图
+### 图的顶点与边间的关系
+1. 度（Degree）：和该顶点相关联的边的数目
