--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -296,3 +296,64 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 ### 集线器（多口中继器）
 对信号进行放大转发，再生，放大信号
 不具备信号的定向传送能力，是一个共享性设备
+
+# 数据链路层
+1. 链路层的功能
+2. 链路层的两种信道
+3. 局域网、广域网
+4. 链路层的设备
+## 数据链路层概述
+### 数据链路层基本概念
+1. 结点：主机、路由器
+2. 链路：网络中两个结点之间的物理通道，链路的传输介质主要是双绞线、光纤和微波。分为有限链路、无线链路
+3. 数据链路：网络中两个结点之间的逻辑通道，把实际控制数据传输协议的硬件和软件加到链路上就构成数据链路
+4. 帧：链路层的协议数据单元，封装网络层数据报
+5. 数据链路层负责通过一条链路从一个结点向两一个物理链路直接连接的相邻结点传送数据报
+### 数据链路层功能概述
+数据链路层在物理层提供服务的基础上**向网络层提供服务**，其最基本的服务是将源自网络层来的数据*可靠*地传输到相邻结点的目标机网络层。其主要作用是**加强物理层传输原式比特流的功能**，将物理层提供的可以出错的物理连接改造成为*逻辑上无差错的数据链路*，使之对网络层表现为一条无差错的链路
+1. 为网络层提供服务：无确认无连接服务、有确认无连接服务、有确认面向服务（有连接一定有确认）
+2. 链路管理，即连接的建立、维持、释放（用于面向连接的服务）
+3. 组帧
+4. 流量控制
+5. 差错控制
+## 封装成帧
+1. 封装成帧：在一段数据的前后部分添加首部和尾部，这样就构成了一个帧。接收端在收到物理层上交的比特流后，就能根据首部和尾部的标记，从收到的比特流中识别帧的开始和结束
+2. 首部和尾部包含许多控制信息，他们的一个重要作用：**帧定界**（确定帧的界限）
+3. 帧同步：接收方应该能从接收到的二进制比特流中区分出帧的起始和终止
+4. 数据链路层的帧长：帧首部到帧尾部的距离
+5. 最大传送单元（MTU）：帧的数据部分的最大长度
+6. 组帧方法：①字符计数法；②字符（节）填充法；③零比特填充法；④违规编码法
+7. 透明传输：不管所传数据是什么样的比特组合，都应当能够在链路上传送
+### 字符技术法
+帧首部使用一个计数字段（第一个字节，八位）来标明帧内字符数
+首部一旦发生错误，后面全部无法识别
+### 字符填充法
+在发送端添加转义字符，在接收端把转义字符删掉，实现透明传输
+### 零比特填充法
+1. 在发送端，扫描整个信息字段，只要连续5个1，就立即填入1个0
+2. 在接收端收到一个帧时，先找到标志字段确定边界，再用硬件对比特流进行扫描。发现连续5个1时，就把后面的0删除
+保证了透明传输
+### 违规编码法
+用两个编码中不会用到的电平方式来标志帧的起始和终止
+## 差错控制
+### 差错
+#### 差错的来源
+传输中的差错都是由于噪声引起的
+1. 全局性噪声：由于线路本身电气特性所产生的所及噪声（热噪声），是信道固有的，随机存在的
+    解决方法：提高信噪比来减少或避免干扰（调整传感器）
+2. 局部性噪声：外界特定的断站原因所造成的冲击噪声，是产生差错的主要原因
+    解决办法：通常利用编码技术来解决
+#### 差错的分类
+1. 位错：比特位出错，1变成0、0变成1
+2. 帧错：帧丢失；帧重复；帧失序
+### 检错编码
+#### 奇偶校验码
+由n-1位信息元和1位校验元组成
+1. 奇校验码：n个比特有奇数个1
+2. 偶校验码：n个比特有偶数个1
+只能检查出奇数个比特错误，检错能力为50%
+#### CRC循环冗余码
+最终发送的数据：要发送的数据+帧检验序列FCS（冗余码）
+计算冗余码：
+    1. 加0：加生成多项式阶个0
+    2. 模2除法：数据加0后处于多项式，余数为冗余码/FCS/CRC检验码的比特序列（异或） 
