--- a/Computer Basics/Data Structures and Algorithms/大话数据结构.md
+++ b/Computer Basics/Data Structures and Algorithms/大话数据结构.md
@@ -570,3 +570,30 @@ void InOrderTraverse (BiTree T)
 13. 网（Network）：带权的图
 ### 图的顶点与边间的关系
 1. 度（Degree）：和该顶点相关联的边的数目
+2. 入度（InDegree）：以该顶点为头的数目
+3. 出度（OutDegree）：以该顶点为尾的数目
+4. 路径（Path）：从一个顶点到另一顶点的序列
+5. 路径的长度：路径上的边或弧的数目
+6. 回路（环Cycle）：第一个顶点到最后一个顶点相同的路径
+7. 简单路径：序列中顶点不重复出现的路径
+8. 简单环：出来第一个顶点和最后一个顶点之外，其余顶点不重复出现的回路
+### 连通图相关术语
+1. 连通：一个顶点到另一顶点之间有路径就说明这两个顶点连通
+2. 连通图（Connected Graph）：任意两个顶点都是连通的图
+3. 连通分量：无向图中极大连通子图
+4. 强连接图：每一对顶点都存在路径的有向图
+5. 连通图的生成树：一个极小的连通子圈，它含有图中全部的n个顶点，但只有足以构成一棵树的n-1条边
+6. 有向树：如果一个有向图恰有一个顶点的入度为0，其余顶点的入度均为
+## 图的存储结构
+### 邻接矩阵（Adjacency Matrix）
+图的邻接矩阵存储方式是用两个数组来表示图。一个一维数组存储图中顶点信息，一个二维数组〈称为邻接矩阵)存储图中的边或弧的信息
+### 邻接表
+数组与链表相结合的存储方法称为邻接表(Adjacency List)
+1. 图中顶点用一个一维数组存储，也可以用单链表来存储，但数组可以较容易地读取顶点信息，更加方便。另外，对于顶点数组中，每个数据元素还需要存储指向第一个邻接点的指针，以便于查找该顶点的边信息。
+2. 图中每个顶点Vj的所有邻接点构成一个线性表，由于邻接点的个数不定，所以用单链表存储，无向图称为顶点Vj的边表，有向图则称为顶点Vj作为弧尾的出边表
+### 十字链表（Orthogonal List）
+其中tailvex是指弧起点在顶点袤的下标，headvex是指弧终点在顶点表中的下标，head1ink是指入边表指针域，指向终点相同的下一条边，tailJink是指边表指针域，指向起点相同的下一条边。如果是网，还可以再增加一个weight域来存储权值
+### 邻接多重链表
+其中ivex和jvex是与某条边依附的两个顶点在顶点表中下标。出nk指向依附顶点ivex的下一条边，jlink指向依附顶点jvex的下一条边。这就是邻接多重表结构
+### 边集数组
+由两个一维数组构成。一个是存储顶点的信息;另一个是存储边的信息，这个边数组每个数据元素由一条边的起点下标(begin)、终点下标(end)和权(weigbt)组成
