--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -357,3 +357,62 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 计算冗余码：
     1. 加0：加生成多项式阶个0
     2. 模2除法：数据加0后处于多项式，余数为冗余码/FCS/CRC检验码的比特序列（异或） 
+### 纠错编码
+1. 海明码：可以发现双比特错，但只能纠正单比特错
+2. 工作原理：动一发而牵全身
+#### 海明码工作流程
+1. 确定校验码位数r
+    海明不等式：2^r>=k+r+1(r:冗余信息位、k：信息位)
+2. 确定校验码和数据的位置
+    校验码只能存在在2的几次方的位置，数据按照剩下的位置按序填写
+3. 求校验码的值
+    把数据为变化成二进制位，二进制的位数由数据位最大的位数决定
+    校验码校验的位置是该校验码1位置一致的位
+    校验码的实际值与所有要校验位的实际值异或为0
+4. 检错并纠错
+    求出每个校验码与所要校验位的异或
+    从最后校验码的异或网最前写，得出的二进制数就是出错的位置
+## 流量控制与可靠传输
+1. 由于较高的发送速度和较低的接受能力的不匹配会造成传输出错，所以流量控制室数据链路层的重要工作
+2. 数据链路层的流量控制是点对点；传输层的流量控制是端对端的
+3. 数据链路层流量控制手段：接收方收不下就不回复确认
+4. 传输层流量控制手段：接收端给发送端一个窗口公告
+### 停止——等待协议
+1. 没发送完一个帧就停止发送，等待对方的确，在收到确认后再发送下一个帧
+2. 发送窗口大小=1；接受窗口大小=1
+3. 停止——等待协议目的：解决底层信道出现的丢包问题
+    丢包问题：物理线路故障、设备故障、病毒攻击、路由信息错误等原因，会导致数据报的丢失
+4. 停止——等待协议应用情况：无差错情况；有差错情况
+#### 停止——等待协议关键点
+1. 超时计时器：每发送一个帧就启动一个计时器，计时器到时还未接收到ACK就会重传刚刚未收到确认的帧（**自动重传**）
+2. 数据帧与确认帧必须编号
+3. 接收方如果重复收到编号相同的帧，就丢弃重复帧并重传该帧的确认帧
+4. 发送方如果重复收到编号相同的确认帧，就丢弃重复的确认帧不作处理
+#### 停止——等待协议性能
+1. 简单
+2. 信道利用率太低
+### 滑动窗口协议
+1. 发送窗口：发送方维持一组连续的允许发送的帧的序号
+2. 接受窗口：接受方维持一组持续的允许接受帧的序号
+#### 后退N帧协议（GBN）
+1. 发送窗口大小>1；接受窗口大小=1
+2. 发送方把数据分成：发完被确认的、已经发送等待确认的、还能发送的、还不能发送的
+3. 滑动窗口长度小于2^n-1（n：帧编号的比特位数）
+##### GBN发送方响应
+1. 上层调用：检查发送窗口是否已满（实际上发送方可以缓存数据）
+2. 收到ACK：累积确认，接受n号帧标明接收方收到n号帧及之前的全部帧
+3. 超时事件：出现超时发送方重传所有已发送但未确认的帧
+##### GBN接收方响应
+1. 正确接收：为n号帧发送一个ACK
+2. 其余情况：全部丢弃，为最近安序接收的帧重新发送ACK
+##### GBN性能
+1. 因连续发送数据帧而提高了信道利用率
+2. 重传时必须把原来已经正确传送的数据帧重传，传送效率低
+#### 选择重传协议（SR）
+发送窗口大小>1；接受窗口大小>1
+## 可靠传输、滑动窗口、流量控制
+可靠传输：发送端发啥，接收端收啥
+流量控制：控制发送速率，使接收方有足够的缓冲空间来接受每个帧
+滑动窗口：
+    1. 流量控制：收不下就不给确认，控制发送
+    2，可靠传输：发送端自动重传
