--- a/Computer Basics/Data Structures and Algorithms/大话数据结构.md
+++ b/Computer Basics/Data Structures and Algorithms/大话数据结构.md
@@ -596,4 +596,4 @@ void InOrderTraverse (BiTree T)
 ### 邻接多重链表
 其中ivex和jvex是与某条边依附的两个顶点在顶点表中下标。出nk指向依附顶点ivex的下一条边，jlink指向依附顶点jvex的下一条边。这就是邻接多重表结构
 ### 边集数组
-由两个一维数组构成。一个是存储顶点的信息;另一个是存储边的信息，这个边数组每个数据元素由一条边的起点下标(begin)、终点下标(end)和权(weigbt)组成
+由两个一维数组构成。一个是存储顶点的信息;另一个是存储边的信息，这个边数组每个数据元素由一条边的起点下标(begin)、终点下标(end)和权(weight)组成
