--- a/Computer Basics/Data Structures and Algorithms/大话数据结构.md
+++ b/Computer Basics/Data Structures and Algorithms/大话数据结构.md
@@ -597,3 +597,37 @@ void InOrderTraverse (BiTree T)
 其中ivex和jvex是与某条边依附的两个顶点在顶点表中下标。出nk指向依附顶点ivex的下一条边，jlink指向依附顶点jvex的下一条边。这就是邻接多重表结构
 ### 边集数组
 由两个一维数组构成。一个是存储顶点的信息;另一个是存储边的信息，这个边数组每个数据元素由一条边的起点下标(begin)、终点下标(end)和权(weight)组成
+## 图的遍历
+Traversing Graph：从图中某一定点出发访遍图中其余顶点，且使每一个顶点仅被访问一次的过程
+### 深度优先遍历
+1. DFS(Depth_First_Search)也称深度优先搜索
+2. 从图中某个顶点v出发，访问此顶点，然后从v的未被访问的邻接点出发深度优先遍历圈，直至图中所有和v有路径相通的顶点都被访问到
+3. 类似树的前序遍历
+### 广度优先遍历
+1. BFS(Breadth_First_Search)也称广度优先搜索
+2. 类似树的层序遍历
+3. 利用一个栈在遍历栈的过程中存储下一层的元素
+```python
+def connect(self, root: 'Node') -> 'Node':
+    if not root:
+        return root
+    Q = collections.deque([root])
+    while Q:
+        for i in range(len(Q)):
+            node = Q.popleft()
+            if i < len(Q)-1:
+                node.next = Q[0]
+            if node.left:
+                Q.append(node.left)
+            if node.right:
+                Q.append(node.right)
+    return root
+```
+## 最小生成树
+1. 最小生成树：连通网的最小代价生成树
+### Prim算法
+1. 寻找到最小的边，将两顶点加入到树中
+2. 从图中找到树中顶点除数内部以外相关联的边，找出其中最小的，加入到树中
+3. 循环2
+### Kruskal算法
+判断加入的边不会和已加入的边构成环的情况下加入剩余最小边
