--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -403,16 +403,157 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 2. 收到ACK：累积确认，接受n号帧标明接收方收到n号帧及之前的全部帧
 3. 超时事件：出现超时发送方重传所有已发送但未确认的帧
 ##### GBN接收方响应
-1. 正确接收：为n号帧发送一个ACK
+1. 正确接收：为n号帧发送一个ACK，代表n号帧之前的所有帧都接受完毕
 2. 其余情况：全部丢弃，为最近安序接收的帧重新发送ACK
 ##### GBN性能
 1. 因连续发送数据帧而提高了信道利用率
 2. 重传时必须把原来已经正确传送的数据帧重传，传送效率低
 #### 选择重传协议（SR）
-发送窗口大小>1；接受窗口大小>1
+1. 发送窗口大小>1；接受窗口大小>1
+2. 设置单个确认，同时加大接收窗口，设置接收缓存，缓存乱序到达的帧
+3. 发送方把数据分成：发完被确认的、已经发送等待确认的、还能发送的、还不能发送的
+4. 接收方把数据分成：已经接受完并返回确认的、希望收到但没收到的、收到且确认的（缓存）、等待接受的、还无法接收的
+5. 滑动窗口大小最大为2**（n-1）
+##### SR发送方响应
+1. 上层调用
+2. 收到ACK
+    + 收到在帧序号窗口内的ACK，将帧标记为已接收
+    + 标记已接收的帧序号是窗口下界，则窗口向前移动到具有最小序号的未确认帧处
+3. 超时事件：每个帧都有独立计时器，超时后只重传一个帧
+##### SR接收方响应
+来者不拒（窗口的帧）
+1. 正确接收：确认一个在窗口内的帧而不用管其是否按序，失序的帧将被缓存，并返回该帧的的确认帧，只表示该帧被接受
+2. 窗口滑动：处于窗口下界的帧被接收时，向前滑动窗口至具有最小序号的未确认帧处
+3. 其余情况：忽略该帧、返回该帧的ACK
+##### SR重点
+1. 对数据帧逐一确认，收到一个确认一个
+2. 只重传错误帧
+3. 接收方有缓存
 ## 可靠传输、滑动窗口、流量控制
-可靠传输：发送端发啥，接收端收啥
-流量控制：控制发送速率，使接收方有足够的缓冲空间来接受每个帧
-滑动窗口：
-    1. 流量控制：收不下就不给确认，控制发送
-    2，可靠传输：发送端自动重传
+1. 可靠传输：发送端发啥，接收端收啥
+2. 流量控制：控制发送速率，使接收方有足够的缓冲空间来接受每个帧
+3. 滑动窗口：
+    + 流量控制：收不下就不给确认，控制发送
+    + 可靠传输：发送端自动重传
+## 介质访问控制（MAC协议）
+1. 传输数据使用的两种链路
+    + 点对点链路：两个相邻节点通过一个链路相连，没有第三者。（PPP协议、广域网）
+    + 广播式链路：所有主机共享通信介质（局域网）
+2. 介质访问控制：采取一定的措施，使得两对节点之间的通信不会发生互相干扰的情况
+### 静态划分信道
+1. 信道划分介质访问控制：将受用介质的每个设备与来自同意信道上的其他设备的通信隔离开，把时域和频域合理地分配给网络上的设备
+2. 多路复用技术：把多个型号组合在一条物理信道上进行传输，使得多个计算机或终端设备共享信道资源，提高信道利用率
+#### 频分多路复用FDM
+1. 用户在分配到一定的频带后，在通信过程中自始至终都占用这个频带
+2. 频分复用的所有用户在同样的时间占用不同的带宽（频率带宽）资源
+3. 优点：
+    + 充分利用传输介质带宽，效率较高
+    + 技术比较成熟，实现比较容易
+#### 时分多路复用TDM
+1. 将时间划分成一段段登场的时分复用帧（TDM帧）
+2. 每一个时分复用的用户在每一个TDM帧中占用固定序号的时隙，所有用户轮流占用信道
+3. TDM帧是在物理层传送的比特流所划分的帧，标志一个周期
+4. 统计时分复用STDM：
+    + 每个STDM帧时隙数小于连接在集中器上的用户数
+    + 各用户有了数据就随时发送集中器的输入缓存，然后集中器按顺序依次扫描输入缓存，把缓存发出
+    + 不固定分配时隙，而是按需动态分配时隙
+#### 波分多路复用WDM
+1. 波分多路复用：本质就是光的频分多路复用，在一根光线中传输多种不同波长（频率）的光信号，由于波长不同，所以各路光信号互不干扰，最后再用波长分解复用器将各路波长分解出来
+#### 码分多路复用CDM
+1. 码分多址（CDMA）是码分复用的一种方式
+2. 将一个比特分为多个码片/芯片（chip），每个站点被指定一个唯一的m位的芯片序列
+3. 发送1时发送芯片序列；发送0时发送芯片序列的反码
+4. 不干扰：多个站点同时发送数据时，各个站点芯片序列相互正交
+5. 合并：各路数据在信道中被线性相加
+6. 分离：合并的数据和远战 规格化内积
+### 动态分配信道
+1. 特点：信道并非在用户通信时固定分配给用户
+#### 轮询访问介质访问控制
+既不产生冲突，又要发送时占全部带宽
+##### 轮询协议
+1. 主结点轮流“邀请”从属结点发送数据
+2. 问题：
+    + 轮询开销
+    + 等待延迟
+    + 单点故障
+##### 令牌传递协议
+1. 令牌：
+    + 一个特殊格式的MAC控制帧，不包含任何信息。
+    + 可以控制信道的使用，确保同一时刻只有一个结点独占信道
+2. 问题：
+    + 令牌开销
+    + 等待延迟
+    + 单点故障
+3. 应用于令牌环网（物理星型拓扑，逻辑环形拓扑）
+4. 常用于负载较重、通信量较大的网络中
+#### 随机访问介质访问控制
+1. 所有用户可随机发送信息
+2. 发送信息时占全部带宽
+##### ALOHA协议
+1. 纯ALOHA协议比时隙ALOHA协议吞吐量低，效率更低
+2. 纯ALOHA想法就发，时隙ALOHA协议只有在时间片段开始时才能发
+###### 纯ALOHA协议
+1. 思想：想发就发，不监听信道，不按时间槽发送，随机重发
+2. 冲突检测：接收方检测出差错不予确认，发送方在一定时间内收不到就判断发生冲突
+3. 冲突解决：超时后等一随机时间重传
+###### 时隙ALOHA协议
+1. 思想：把时间分成若干个相同的时间片，所有用户在时间片开始时刻同步接入网络信道，若发生冲突，则必须等到下一个时间片开始时刻再发送
+##### CSMA协议
+载波监听多路访问协议
+1. CS：载波监听，每个站在发送数据之前要检测一下总线上是否有其他计算机在发送数据
+2. MA：多点接入，表示许多计算机以多点接入的方式连接在一根总线上
+3. 协议思想：发送帧之前，监听信道
+4. 监听结果
+    + 信道空闲：发送完整帧
+    + 信道忙：推迟发送
+###### 1-坚持CSMA
+1. 坚持：对于监听信号忙后的坚持
+2. 思想：
+    + 如果一个主机要发送消息，那么它先监听信道
+    + 空闲则直接传输，不必等待
+    + 忙则一直监听，指导空闲马上传输
+    + 如果冲突：等待一个随机场的时间再监听，重复上述过程
+3. 优点：只要媒体空闲，站点就马上发送，媒体利用率高
+4. 缺点：假如有两个或两个以上的站点有数据要发送，冲突不避免
+###### 非坚持CSMA
+1. 非坚持：对于监听信道忙之后就不继续监听
+2. 思想：
+    + 如果一个主机要发送消息，那么它先监听信道
+    + 空闲则直接传输，不必等待
+    + 忙则等待一个随机的时间之后再进行监听
+3. 优点：采用随机的重发延迟时间可以减少冲突发生的可能性
+4. 缺点：可能存在大家都在延迟等待过程中，媒体利用率低
+###### p-坚持CSMA
+1. p-坚持：对监听信道空闲的处理
+2. 思想：
+    + 如果一个主机要发送消息，那么它先监听信道
+    + 空闲则以p概率直接传输，不必等待；概率1-p等待到下一个时间槽再传输
+    + 忙则等待下一个时间槽再进行监听
+3. 优点：既能像非坚持减少冲突，又能像1-坚持减少媒体空闲时间
+4. 缺点：发生冲突后还是坚持把数据帧发送完，造成了浪费
+##### CSMA/CD协议
+载波监听多点接入/碰撞检测协议
+1. CS：载波监听，每个站在发送数据之前以及**发送数据时**要检测一下总线上是否有其他计算机在发送数据
+2. MA：多点接入，表示许多计算机以多点接入的方式连接在一根总线上（应用于以太网）
+3. CD：碰撞检测（冲突检测），“边发送边监听”，适配器边发送数据边检测信道上信号电压的变化情况，以判断自己在发送数据时其他站是否也在发送数据（应用于半双工网络）
+4. 只要经过2τ时间还没有检测到碰撞就能肯定这次发送不会发生碰撞
+5. 截断二进制指数规避算法：
+    + 确定基本退避（推延）时间为征用期2τ
+    + 定义参数k，k=min(重传次数，10)
+    + 从离散的整数集合[ 0,1,2**k-1]中随机取出一个数r，重传所需退避时间为r被的基本退避时间
+    + 当重传达到16次仍不能成功，说明网络太拥挤，认为此帧永远无法正确发出，抛弃此帧并向高层报告错误
+6. 最小帧长=总线传播时延 * 数据传输速率 * 2
+##### CSMA/CA协议
+载波监听多点接入/碰撞避免
+1. 应用于无线局域网，CD无法全面检测碰撞
+2. 工作原理：
+    + 发送数据前，先检测信道是否空闲
+    + 空闲则发出RTS；忙则等待
+    + 接收端收到RTS，将响应CTS
+    + 发送端收到CTS后，开始发送数据帧。同时预约信道（发送端告知其他站点自己要传多久数据）
+    + 接收端收到数据帧后，用CRC来检验数据是否正确，正确则响应ACK帧
+    + 发送方收到ACK就可以进行数据帧发送；若没有则一致重传到规定重发次数为止（截断二进制指数规避算法）
+3. 重点：
+    + 预约信道
+    + ACK帧
+    + RTS/CTS帧（可选）
