--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -557,3 +557,41 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
     + 预约信道
     + ACK帧
     + RTS/CTS帧（可选）
+## 局域网
+### 基本概念
+1. 局域网：简称LAN，在某一区域内由多台计算机互联成的计算机组，使用广播信道
+2. 局域网特点：
+    + 覆盖的地理范围小，只在一个相对独立的局部范围内互联
+    + 使用专门铺设的传输介质进行联网，数据传输速率高
+    + 通信延迟时间短，误码率低，可靠性较高
+    + 各站点为平等关系，共享传输信道
+    + 多采用分布式控制和广播式通信，能进行广播和组播
+3. 局域网的主要要素：网络拓扑；传输介质；介质访问控制方法
+#### 局域网拓扑结构
+1. 星型拓扑：中间节点是控制中心，结构简单、建网容易；网络可靠性低、网络共享能力差，有单点故障问题
+2. 总线型拓扑：网络可靠性高、节点响应速度快、成本低、无单点故障问题
+3. 环形拓扑：通信设备和线路比价节省；有单点故障问题、不易扩充、系统响应延时长、信息传输效率低
+4. 树型拓扑：易于扩展、易于隔离故障；有单点故障问题
+#### 局域网传输介质
+1. 有线局域网：双绞线、同轴电缆、光纤
+2. 无线局域网：电磁波（空气）
+#### 介质访问控制方法
+1. CSMA/CD：常用于总线型局域网，也用于树型局域网
+2. 令牌总线：常用于总线型局域网，也用于树型局域网。把网络中各个工作站按一定顺序排列形成一个逻辑换，只有持有令牌才能控制总线
+3. 令牌环：常用于环形局域网
+#### 局域网分类
+1. 以太网：IEEE 802.3标准；逻辑拓扑总线型、物理拓扑是星型或扩展星型；CSMA/CD
+2. 令牌环网:物理上星型拓扑，逻辑上环形拓扑
+3. FDDI网：光纤，造价高；物理上双环拓扑、逻辑上环形拓扑
+4. ATM网：较新型的单元交换技术，使用固定53字节单元交换
+5. 无线局域网：IEEE 802.11标准
+#### IEEE 802标准
+1. IEEE 802.3:以太网
+2. IEEE 802.5:令牌环网
+3. IEEE 802.8：光纤技术
+4. IEEE 802.11：无线局域网
+#### MAC子层和LLC子层
+1. IEEE 802标准描述的局域网参考模型只对应数据链路层和物理层
+2. IEEE 802标准将数据链路层划分为：逻辑链路层LLC子层；介质访问控制MAC子层
+3. LLC子层：负责识别网络层协议，然后进行封装。为网络层提供服务：无确认无连接、面向连接、带确认无连接、高速传送
+4、 MAC子层：负责数据帧的封装/卸装，帧的寻址和识别，帧的接受与发送，链路的管理，帧的差错控制，屏蔽了不同物理链路种类的差异性
