--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -595,3 +595,78 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 2. IEEE 802标准将数据链路层划分为：逻辑链路层LLC子层；介质访问控制MAC子层
 3. LLC子层：负责识别网络层协议，然后进行封装。为网络层提供服务：无确认无连接、面向连接、带确认无连接、高速传送
 4、 MAC子层：负责数据帧的封装/卸装，帧的寻址和识别，帧的接受与发送，链路的管理，帧的差错控制，屏蔽了不同物理链路种类的差异性
+### 以太网
+1. 以太网（Ethernet）指几个公司联合开发的*基带总线局域网规范*
+2. 以太网使用CSMA/CD技术
+3. 以太网优点：
+    + 造价低廉
+    + 应用最广泛
+    + 偏移、简单
+    + 满足网络速率的要求
+4. 以太网的两个标准：
+    + DIX Ethernet
+    + IEEE 802.3
+#### 以太网提供的服务
+1. 无连接：发送方和接收方之间无“握手过程”
+2. 不可靠：
+    + 不对发送方的数据帧编号
+    + 接收方不向发送方进行确认，差错帧直接退旗，差错纠正由高层负责
+3. 智能实现无差错的接受，不实现可靠传输
+#### 传输介质与拓扑结构
+1. 粗同轴电缆————细同轴电缆————双绞线+集线器
+2. 总线型——————————————————————星型
+3. 逻辑上总线型，物理上星型
+#### 10BASE-T以太网
+1. 10BASE-T是传输基带信号的双绞线以太网，采用的是无屏蔽双绞线，传输速率是10Mb/s，T表示采用双绞线
+2. 物理上采用星型拓扑，逻辑上总线型
+3. 每段双绞线最长100m
+4. 采用曼切斯特编码
+5. CSMA/CD介质访问控制
+#### 适配器与MAC地址
+1. 适配器：连接计算机与外界局域网的连接
+2. MAC地址：局域网中硬件地址，48位二进制地址
+#### 以太网MAC帧
+1. 最常用的MAC帧是以太网V2的格式
+2. MAC帧：目的地址（6字节）+源地址（6字节）+类型（2地址）+数据（46-1500）+FCS（纠错编码）（4字节）
+#### 高速以太网
+1. 100BASE-T以太网：双绞线上传送100Mb/s基带信号的星型拓扑以太网；支持全双工和半双工
+2. 吉比特以太网：在光纤或双绞线上传送1Gb/s信号；支持全双工和半双工
+3. 10吉比特以太网：在光纤上传送10Gb/s信号；只支持全双工
+### 无限局域网
+#### IEEE 802.11
+1. 无线局域网通用的标准
+2. 802.11的MAC帧头格式：帧控制（2）+生存周期ID（2）+地址1（RA接收端，6）+地址2（TA发送方，6）+地址3（DA目的地，6）+序列控制（2）+地址4（SA源地址，6）
+#### 无线局网分类
+1. 有固定基础设施无线局域网
+2. 无固定基础设施无限局域网
+## 广域网协议
+1. 广域网：提供远距离通信，通信子网使用分组交换技术
+2. 广域网可是实现远距离局域网的连接
+### PPP协议
+1. PPP协议：点对点协议，使用最广泛的数据链路层协议
+2. PPP协议只支持全双工链路
+3. 面向字节的协议
+#### PPP协议要求
+1. 简单：对于链路层的帧，无需纠错，无需序号，无需流量控制
+2. 封装成帧：帧定界符
+3. 透明传输：与帧定界符一样比特组合的处理：异步线路用字节填充；同步线路用比特填充
+4. 满足多种网络层协议
+5. 满足多种类型链路
+6. 实现差错检测
+7. 检测连接状态
+8. 满足最大传送单元
+9. 网络层地址协商
+10. 数据压缩协商
+#### PPP协议无需满足要求
+1. 纠错
+2. 流量控制
+3. 序号
+4. 不支持多点线路
+#### PPP协议功能
+1. 将IP数据报封装到串行链路（同步串行/异步串行）的方法
+2. 链路控制协议LCP：建立并维护数据链路层连接
+3. 网络控制协议NCP：不同的网络层协议都要一个相应的NCP来配置，为网络层协议建立和配置逻辑连接
+#### PPP协议的状态图
+
+#### PPP协议的帧格式
+帧定界符7E+地址字段FF+C03+协议+IP数据报+FCS+帧定界符7E
