--- a/Computer Basics/Data Structures and Algorithms/大话数据结构.md
+++ b/Computer Basics/Data Structures and Algorithms/大话数据结构.md
@@ -631,3 +631,19 @@ def connect(self, root: 'Node') -> 'Node':
 3. 循环2
 ### Kruskal算法
 判断加入的边不会和已加入的边构成环的情况下加入剩余最小边
+## 最短路径
+1. 对于网图来说，最短路径，是指两顶点之间经过的边上权值之和最少的路径，并且我们称路径上的第一个顶点是源点，最后一个顶点是终点。
+### Dijkstra算法
+逐步求出起点到后面点的最短路径，并不断向终点更新
+### Floyed算法
+更新状态矩阵，类似于动态规划
+## 拓扑排序
+拓扑排序对一个有向图构造拓扑序列的过程
+### 拓扑排序算法
+## 关键路径
+路径上各个活动所持续的时间之和称为路径长度
+从源点到汇点具有最大长度的路径叫关键路径
+在关键路径上的活动叫关键活动
+### 关键路径算法
+
+# 查找
