--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -667,6 +667,52 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 2. 链路控制协议LCP：建立并维护数据链路层连接
 3. 网络控制协议NCP：不同的网络层协议都要一个相应的NCP来配置，为网络层协议建立和配置逻辑连接
 #### PPP协议的状态图
-
+![PPP协议的状态图](https://i.loli.net/2020/10/27/kKuoWvBHzY3rMb7.jpg)
 #### PPP协议的帧格式
 帧定界符7E+地址字段FF+C03+协议+IP数据报+FCS+帧定界符7E
+### HDLC协议
+1. HDLC：高级数据链路控制协议
+2. 面向比特的数据链路层协议
+3. 可实现透明传输，使用“0比特插入法”
+4. 采用全双工通信
+5. CRC检验，对信息帧进行顺序编号，传输可靠性高
+#### HDLC站
+1. 主站：发送命令帧、接受响应帧
+2. 从站：接受主站发送来的命令帧，向主站发送响应帧
+3. 复合站：既能发送又能接受命令帧和响应帧
+4. 三种数据操作方式：
+    + 正常响应方式
+    + 异步平衡方式
+    + 异步响应方式
+#### HDLC帧格式
+标志字段+地址A+控制C+信息+帧检验序列FCS+标志字段
+### PPP与HDLC比较
+#### 相同点
+1. 都只支持全双工链路
+2. 都可实现透明传输
+3. 都可实现差错检测，但不纠正
+#### 不同点
+1. 对于透明传输：PPP可以比特填充和字节填充；HDLC只能比特填充
+2. PPP面向字节；HDLC面向比特
+3. PPP有两个字节协议字段
+4. PPP无序号无确认机制，不可靠；HDLC有编号和确认机制，可靠
+## 链路层设备
+### 物理层扩展以太网
+1. 光纤调制器、光纤解调器
+2. 主干集线器扩展冲突域
+### 链路层扩展以太网
+#### 网桥
+1. 网桥：根据MAC帧的目的地址对帧进行转发和过滤
+2. 网段：一个计算机网络中使用同一物理层设备能够直接通讯的部分
+3. 网桥优点：
+    + 过滤通信量。增大吞吐量
+    + 扩大了物理范围
+    + 提高可靠性
+    + 互联不同物理层、不同MAC子层和不同速率的以太网
+4. 网桥分类：
+    + 透明网桥：即插即用，以太网的站点不知道帧将经过哪些网桥
+    + 源路由网桥：发送帧时，把详细的最佳路由信息（路由最少/时间最短）放在帧的首部
+#### 以太网交换机
+1. 以太网交换机可以独占传输媒体带宽
+2. 直通式交换机：查完目的地址就立即转发；延迟小，可靠性低，无法支持具有不同速率的端口的交换
+3. 存储转发式交换机：将帧放入高速缓存，并检查是否正确，正确就转发，错误则丢弃；延迟大，可靠性高，可以支持具有不同速率的端口交换
