--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -716,3 +716,53 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 1. 以太网交换机可以独占传输媒体带宽
 2. 直通式交换机：查完目的地址就立即转发；延迟小，可靠性低，无法支持具有不同速率的端口的交换
 3. 存储转发式交换机：将帧放入高速缓存，并检查是否正确，正确就转发，错误则丢弃；延迟大，可靠性高，可以支持具有不同速率的端口交换
+
+# 网络层
+## 网络层概述
+### 网络层功能
+1. 主要任务：把分组从源端传到目的端，为分组交换网上的不同主机提供通信服务
+2. 网络层传输单位：数据报
+3. 功能一：路由选择与分组转发（选择最佳路径）
+4. 功能二：异构网络互联
+5. 功能三：拥塞控制
+    拥塞：所有结点都来不及接受分组，要丢弃大量分组
+    开环控制：静态控制方法
+    闭环控制：动态控制方法
+### 数据交换方式
+#### 电路交换
+1. 电路交换流程：
+    建立连接————通信————释放连接
+2. 优点：
+    + 通信时延小
+    + 有序传输
+    + 没有冲突
+    + 实时性强
+3. 缺点：
+    + 建立连接时间长
+    + 线路独占，使用效率低
+    + 灵活性差
+    + 无差错控制能力
+4. 特点：独占资源
+#### 报文交换
+1. 报文：源应用发送的信息整体
+2. 优点
+    + 无需建立连接
+    + 存储转发，动态分配线路
+    + 线路可靠性高
+    + 线路利用率较高
+    + 多目标服务
+3. 缺点：
+    + 有存储转发时延
+    + 报文大小不定，需要网络节点有较大缓存空间
+#### 分组交换
+1. 分组：把大的数据块分割成小的数据块
+2. 优点：
+    + 无需建立连接
+    + 存储转发，动态分配线路
+    + 线路可靠性较高
+    + 线路利用率较高
+    + 相对于报文交换，存储管理更容易
+3. 缺点：
+    + 有存储转发时延
+    + 需要传输额外的信息量
+    + 乱序到目的主机时，要对分组排序重组
