--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -766,3 +766,74 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
     + 有存储转发时延
     + 需要传输额外的信息量
     + 乱序到目的主机时，要对分组排序重组
+##### 数据报方式、虚电路方式
+1. 数据报方式：为网络层提供无连接服务
+2. 无连接服务：不事先为分组的传输确定传输路径，每个分组独立确定传输路径，不同分组传输路径可能不同
+3. 每个分组都携带源地址和目的地址
+4. 路由器根据分组的目的地址转发分组：基于路由协议/算法构建转发表；检索转发表；每个分组独立选路
+##### 虚电路方式
+1. 虚电路方式：为网络层提供连接服务，将数据报方式和电路交换方式结合，发挥两者优点
+2. 连接服务：首先为分组的传输确定传输路径（建立连接），然后沿该路径（连接）传输系列分组，系列分组传输路径相同，传输结束后拆除连接
+3. 虚电路：一条源主机到目的主机类似于电路的路径（逻辑连接），路径上所有节点都要维持这条虚电路的建立。都维持一张虚电路表，每一项记录了一个打开的虚电路的信息
+4. 通信过程：
+    + 建立连接（虚电路的建立）：
+        每个分组携带虚电路号，而非目的地址。
+        源主机发送“呼叫请求”分组，并收到“呼叫应答”分组后才算建立连接
+    + 数据传输：全双工通信
+    + 释放连接（虚电路释放）：源主机发送“释放请求”分组以拆除虚电路
+### 传输单元名词
+1. 报文：应用层的传输单元
+2. 报文段：传输层的传输单元，将报文分割而成
+3. IP数据报：报文段到网络层封装上网络层地址（源地址、目的地址）
+4. 分组：网络层的传输单元，将过长的数据报切割而成
+5. 帧：数据链路层的传输单元，将分组加头加尾
+6. 比特流：物理层的传输单元
+### 路由算法与路由协议概述
+#### 路由算法
+1. 最佳路由：“最佳”只能是相对于某一种特定要求下得出的较为合理的选择而已
+##### 路由算法分类
+1. 静态路由算法（非自适应路由算法）：管理员手工配置路由信息
+    + 优点：简便、可靠，在负载稳定、拓扑变化不大的网络中运行效果好
+    + 缺点：路由更新慢。不适用大型网络
+2. 动态路由算法（自适应路由算法）：路由器之间彼此家坡缓信息，按照路由算法优化出路由表项
+    + 优点：路由更新快，适用大型网络，及时响应链路费用或拓扑变化
+    + 缺点：算法复杂，增加网络负担
+    + 全局性动态路由算法：链路状态路由算法OSPF
+        所有路由器掌握完整的网络拓扑和链路费用信息
+    + 分散性动态路由算法：距离向量路由算法RIP
+        路由只掌握物理相连的邻居及链路费用
+#### 路由协议
+1. 自治系统AS：在单一的技术管理下的一组路由器。而这些路由器使用一种AS内部的路由选择协议和共同的度量以确定分组在该AS内的路由，同时还使用一种AS之间的路由协议以确定在AS之间的路由
+    一个AS内的所有网络都数据一个行政单位来管辖，一个自治系统的所有路由器在本自治系统内都必须连通
+1. 内部网关协议IGP，一个AS内使用的，如RIP、OSPF
+2. 外部网关协议EGPAS之间使用的，如BGP
+## IP数据报
+### IP数据报格式
+1. 首部（固定部分+可变部分）+数据部分（TCP、UDP段）
+2. 首部
+    * 固定部分：
+        + 版本：IP协议的版本（4bit）
+        + 首部长度：单位是4字节，最小是5（4bit）
+        + 区分服务：期望获得那种类型的服务（8bit）
+        + 总长度：整个IP数据报的长度，单位是1B（16bit）
+        + 标识：同一数据包的分片使用同一标识（16bit）
+        + 标志：只用后两位有用（3bit）
+            - 中间位DF
+                1：禁止分片
+                0：允许分片
+            - 最低位MF
+                1：后面还有分片
+                0：代表租后一篇/没分片
+        + 片偏移：某片在原分组中的相对位置，以8B为单位（13bit）
+        + 生存时间（TTL）：IP分组的保质期。每经过一个路由器生存时间-1，变成0则丢弃（8bit）
+        + 协议：数据部分使用的协议（TCP：6；UDP：17）（8bit）
+        + 首部检验和：只检验首部（16bit）
+        + 源地址（32bit）
+        + 目的地址（32bit）
+    * 可变部分：
+        + 可选字段（长度可变）：用来支持拍错、测量以及安全等措施（0~40B）
+        + 填充：全0，报首部不成4B的整数倍
+### IP数据报分片
+1. 最大传送单元MTU：链路层数据帧可封装数据的上限
+2. 除了最后一个分片，每个分片长度一定是8B的整数倍
+3. 片偏移量是从数据部分开始计算，不计首部
