--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -7,6 +7,7 @@
 计算机网络：一个将分散的、具有独立功能的**计算机系统**，通过**通信设备**与**线路**连接起来，由功能完善的**软件**实现资源共享和信息传递的系统
 计算机网络是**互连**的、**自治**的计算机集合
 互连：互联互通，计算机相互之间连通，能通信；自治：计算机之间不存在主从关系，不能彼此控制对方
+
 ## 计算机网络功能
 1. 数据通信（最重要）
 保证连通性
@@ -19,6 +20,7 @@
 存在替代机，
 5. 负载均衡
 分布式处理达到的效果
+
 ## 计算机网络的组成
 ### 组成部分
 1. 硬件：主机（端系统）、链路（例如光纤）、通信设备（路由器等）
@@ -51,6 +53,7 @@
 ### 按传输技术
 1. 广播式网络：共享公共通信信道
 2. 点对点网络：使用分组存储转发和路由选择机制
+
 ## 标准化工作
 ### 标准分类
 1. 法定标准：由权威机构指定的正式的、合法的标准（OSI）
@@ -66,6 +69,7 @@
 2. ITU：国际电信联盟
 3. IEEE：国际电气电子工程师协会
 4. IETF：Internet工程任务组
+
 ## 计算机网络性能
 ### 速率
 速率即数据率或数据传输率或比特率
@@ -103,6 +107,7 @@ RTT = 2*传播时延+末端处理时间
 ### 利用率
 1. 信道利用率 = 有数据通过的时间/（有+无）数据通过时间
 2. 网络利用率 = 信道利用率加权平均值
+
 ## 分层结构
 ### 分层的基本原则
 服务：每两层之间提供的东西，上层是使用下层服务，下层为上层服务
@@ -123,6 +128,7 @@ RTT = 2*传播时延+末端处理时间
 7. PCI（协议控制信息）：控制协议操作的信息
 8. PDU（协议数据单元）：对等层次之间传送的数据单元
 9. 计算机网络体系结构是计算机网络的各层及其协议的集合
+
 ## 计算机网络分层结构
 ### OSI参考模型
 法定标准；7层（物联网淑惠试用）
@@ -218,12 +224,15 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 比特传输
 ![QQ截图20200920121251.jpg](https://i.loli.net/2020/09/20/oUgH9NATh4PCOLY.jpg)
 
+
+
 # 物理层
 1. 通信基础
 2. 两个公式lim
 3. 看图说话
 4. 传输介质
 5. 物理层设备
+
 ## 物理层基本概念
 1. 物理层解决如何在连接各种计算机的传输媒体上**传输数据比特流**，而不是指具体的传输媒体
 2. 物理层主要任务：确定与传输媒体接口有关的一些特性
@@ -231,6 +240,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 4. 电气特性：规定传输二进制位时，线路上信号的电压范围、阻抗匹配、传输速率和距离限制等
 5. 功能特性：指明某条线上出现的某一电平表示何种意义，接口部件的信号线的用途
 6. 过程特性：定义各条物理线路的工作规程和时序关系
+
 ## 数据通信基础知识
 1. 通信目的：传送消息
 2. 数据：传送信息的实体，通常是有意义的符号序列
@@ -242,43 +252,48 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 6. 信道：信号的传输媒介
 7. 三种通信方式：单工通信、半双工通信（不能同时发收）、全双工通信
 8. 两种数据传输方式：串行传输（速度慢、费用低、适合远距离）、并行传输（速度快、费用高、适合近距离）
+
 ## 码元
 1. 码元：一个固定时长的信号波形，代表不同离散数值的基本波形，是阿虎I通信中数字信号的计量单位
 2. 码元宽度：码元的时长
 3. 当码元的离散状态有M个时，称为M进制码元
 4. 1码元可以携带多个比特的信息量
+
 ## 速率、波特、带宽
 1. 速率也叫数据率，指数据的传输速率，代表单位时间内容传输的数据量
 2. 可以用码元传输速率和信息传输速率表示
 3. 码元传输速率：1s传输多少码元，表示单位时间内数字通信系统所传输的码元个数（脉冲个数、信号变化次数）。又称码元速率、波形速率、调制速率、符号速率。单位波特（Baud）
 4. 信息传输速率：1s传输多少比特，表示单位时间内容数字通信系统传输的二进制码元个数（比特数）。又称信息速率、比特率。单位是比特/秒（b/s）
 5. 带宽：表示带单位时间内从网络中的某一点到另一点所能通过的“**最高数据率**”
+
 ## 奈氏准则和香农定理
 1. 影响失真程度的因素：码元传输速率；信号传输距离；噪声干扰；传输媒体质量
 2. 信道带宽：信道能通过的最高频率和最低频率之差
 3. 码间串扰：接收端收到的信号波形失去了码元之间清晰界限的现象
 4. 奈氏准则给出了码元传输速率的限制，但没有对信息传输速率给出限制
 5. 香农定理：在带宽受限且有噪声的信道中，为了不产生误差，信息的传输速率有上限值
+
 ## 编码与调制
 ### 系带信号与宽带信号
 1. 基带信号：将数字信号用两种不同的电压表示送到数字信道上传输（基带传输）
 2. 宽带信号：将基带信号进行调制后形成的频分复用模拟信号，再传送到模拟信号上去传输（宽带传输）
-## 编码
+### 编码
 数据变为数字信号
-### 数字数据编码为数字信号
+#### 数字数据编码为数字信号
 1. 非归零编码（NRZ）
 2. 曼切斯特编码
 3. 差分曼切斯特编码
-### 模拟数据编码为数字信号
+#### 模拟数据编码为数字信号
 1. PCM：抽样、量化、编码
-## 调制
+### 调制
 数据变为模拟信号
-### 数字数据调制为模拟信号
+#### 数字数据调制为模拟信号
 1. ASK(调幅)
 2. FSK(调频)
 3. PSK(调相)
 4. QAM(调幅+调相)
-### 模拟数据调制为模拟信号
+#### 模拟数据调制为模拟信号
+
 ## 物理层传输介质
 传输介质：数据传输系统中在发送设备和接受设备之间的物理通路，也称传输媒体/传输媒介
 ### 导向性传输介质
@@ -289,6 +304,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 1. 无线电波
 2. 微波
 3. 红外线、激光
+
 ## 物理层设备
 ### 中继器
 对信号进行再生和还原，再生数字信号
@@ -297,11 +313,14 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 对信号进行放大转发，再生，放大信号
 不具备信号的定向传送能力，是一个共享性设备
 
+
+
 # 数据链路层
 1. 链路层的功能
 2. 链路层的两种信道
 3. 局域网、广域网
 4. 链路层的设备
+
 ## 数据链路层概述
 ### 数据链路层基本概念
 1. 结点：主机、路由器
@@ -316,6 +335,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 3. 组帧
 4. 流量控制
 5. 差错控制
+
 ## 封装成帧
 1. 封装成帧：在一段数据的前后部分添加首部和尾部，这样就构成了一个帧。接收端在收到物理层上交的比特流后，就能根据首部和尾部的标记，从收到的比特流中识别帧的开始和结束
 2. 首部和尾部包含许多控制信息，他们的一个重要作用：**帧定界**（确定帧的界限）
@@ -335,6 +355,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 保证了透明传输
 ### 违规编码法
 用两个编码中不会用到的电平方式来标志帧的起始和终止
+
 ## 差错控制
 ### 差错
 #### 差错的来源
@@ -372,6 +393,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 4. 检错并纠错
     求出每个校验码与所要校验位的异或
     从最后校验码的异或网最前写，得出的二进制数就是出错的位置
+
 ## 流量控制与可靠传输
 1. 由于较高的发送速度和较低的接受能力的不匹配会造成传输出错，所以流量控制室数据链路层的重要工作
 2. 数据链路层的流量控制是点对点；传输层的流量控制是端对端的
@@ -429,12 +451,14 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 1. 对数据帧逐一确认，收到一个确认一个
 2. 只重传错误帧
 3. 接收方有缓存
+
 ## 可靠传输、滑动窗口、流量控制
 1. 可靠传输：发送端发啥，接收端收啥
 2. 流量控制：控制发送速率，使接收方有足够的缓冲空间来接受每个帧
 3. 滑动窗口：
     + 流量控制：收不下就不给确认，控制发送
     + 可靠传输：发送端自动重传
+
 ## 介质访问控制（MAC协议）
 1. 传输数据使用的两种链路
     + 点对点链路：两个相邻节点通过一个链路相连，没有第三者。（PPP协议、广域网）
@@ -557,6 +581,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
     + 预约信道
     + ACK帧
     + RTS/CTS帧（可选）
+
 ## 局域网
 ### 基本概念
 1. 局域网：简称LAN，在某一区域内由多台计算机互联成的计算机组，使用广播信道
@@ -696,6 +721,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 2. PPP面向字节；HDLC面向比特
 3. PPP有两个字节协议字段
 4. PPP无序号无确认机制，不可靠；HDLC有编号和确认机制，可靠
+
 ## 链路层设备
 ### 物理层扩展以太网
 1. 光纤调制器、光纤解调器
@@ -716,6 +742,8 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 1. 以太网交换机可以独占传输媒体带宽
 2. 直通式交换机：查完目的地址就立即转发；延迟小，可靠性低，无法支持具有不同速率的端口的交换
 3. 存储转发式交换机：将帧放入高速缓存，并检查是否正确，正确就转发，错误则丢弃；延迟大，可靠性高，可以支持具有不同速率的端口交换
+
+
 
 # 网络层
 ## 网络层概述
@@ -807,6 +835,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
     一个AS内的所有网络都数据一个行政单位来管辖，一个自治系统的所有路由器在本自治系统内都必须连通
 1. 内部网关协议IGP，一个AS内使用的，如RIP、OSPF
 2. 外部网关协议EGPAS之间使用的，如BGP
+
 ## IP数据报
 ### IP数据报格式
 1. 首部（固定部分+可变部分）+数据部分（TCP、UDP段）
@@ -837,3 +866,56 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 1. 最大传送单元MTU：链路层数据帧可封装数据的上限
 2. 除了最后一个分片，每个分片长度一定是8B的整数倍
 3. 片偏移量是从数据部分开始计算，不计首部
+
+## IP地址
+1. IP地址：全世界唯一的32位/4字节标识符，标识路由器主机的接口
+2. :={<网络号>,<主机号>}
+3. 采用点分十进制，例：223.1.1.1
+### 分类的IP地址
+1. A类：0+7bit+主机号
+2. B类：10+14bit+主机号
+3. C类：110+21bit+主机号
+4. D类：1110+多播地址
+5. E类：1111（保留为今后使用）
+![IP地址分类使用.jpg](https://i.loli.net/2020/11/06/dMXOF46YuKbZeaq.jpg)
+#### 特殊IP地址
+![特殊IP地址.png](https://i.loli.net/2020/11/06/A5hz29cMHLpUP3D.png)
+#### 私有IP地址
+路由器对目的地址是私有IP地址的数据报一律不进行转发
+1. A类：10.0.0.0~10.255.255.255
+2. B类：172.16.0.0~172.31.255.255
+3. C类：192.168.0.0~191.168.255.255
+#### 分来IP地址弱点
+1. IP地址空间利用率很低
+2. 两级的IP地址不够灵活
+### NAT网络地址转换
+1. 网络地址转换：在专用网连接到因特网的路由器上安装NAT软件
+2. NAT路由器：安装了NAT软件的路由器，至少有一个有效的外部全球IP地址
+3. NAT转换表
+    WAN端：IP地址——端口号
+    LAN端：IP地址——端口号
+### 子网划分
+1. 采用三级IP地址：网络号+子网号+主机号（子网号从原来的主机号里的高位划出来）
+2. 单位划分子网后，对外仍表现为一个网络
+3. 子网掩码
+    + 二级IP地址：网络号全1，主机号全0
+    + 三级IP地址：网络号和子网号全1，主机号全0
+4. 子网掩码与IP地址逐位与运算，得到子网网络地址
+5. 使用子网时路由器转发分组算法
+    + 提取IP地址
+    + 判断是否直接交付
+    + 查看路由表中的特定主机路由
+    + 检测路由表中有无路径
+    + 默认路由0.0.0.0
+    + 丢弃，报告转发分组出错
+### 无分类编制CIDR
+1. 消除传统A类、B类、C类地址以及划分子网的概念
+    + IP地址：网络前缀+主机号
+    + CIDR记法：在IP地址后加上/，然后写上网络前缀的位数
+4. 融合子网地址与子网掩码，方便子网划分
+    + CIDR地址块：由网络前缀相同的连续IP地址组成，用最小地址/网络前缀位数
+    + 地址掩码：网络前缀全1，主机号全0
+#### 构成超网
+1. 构成超网（路由聚合）：将多个子网聚合成一个较大的子网
+2. 方法：缩短网络前缀
+3. 最长前缀匹配：使用CIDR时，查找路由表选择具有最长网络前缀的路由
