--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -834,7 +834,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 1. 自治系统AS：在单一的技术管理下的一组路由器。而这些路由器使用一种AS内部的路由选择协议和共同的度量以确定分组在该AS内的路由，同时还使用一种AS之间的路由协议以确定在AS之间的路由
     一个AS内的所有网络都数据一个行政单位来管辖，一个自治系统的所有路由器在本自治系统内都必须连通
 1. 内部网关协议IGP，一个AS内使用的，如RIP、OSPF
-2. 外部网关协议EGPAS之间使用的，如BGP
+2. 外部网关协议EGP，AS之间使用的，如BGP
 
 ## IP数据报
 ### IP数据报格式
@@ -919,3 +919,127 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 1. 构成超网（路由聚合）：将多个子网聚合成一个较大的子网
 2. 方法：缩短网络前缀
 3. 最长前缀匹配：使用CIDR时，查找路由表选择具有最长网络前缀的路由
+
+## IP相关协议
+### ARP协议
+ARP高速缓存：IP地址与MAC地址的映射，用于网络层到数据链路层中增加MAC地址时使用
+#### ARP协议使用过程
+1. 检查ARP高速缓存，有对应表项则写入MAC帧
+2. 没有则广播ARP分组请求 （自身IP地址+目的IP地址+自身物理MAC地址+全1广播目的MAC地址）
+3. 单播放ARP响应分组 （目的IP地址+目的MAC地址），源主机收到后将此映射写入ARP缓存
+4. PS：两个IP地址不在一个网段内，目的MAC地址是默认网关（路由器）MAC地址
+#### ARP协议特点
+1. ARP协议的产生原因：在实际网络的链路上传送数据帧时，最终必须使用MAC地址
+2. ARP协议：完成主机或路由器IP地址到MAC地址的映射
+3. ARP协议自动进行
+#### ARP协议典型情况
+1. 主机A发给**本网络**上的主机B：用ARP找到主机B的硬件地址
+2. 主机A发给**另一网络**上的主机B：用ARP找到本网络上一个路由器（网关）的硬件地址
+3. 路由器发给**本网络**的主机A：用ARP找到主机A的硬件地址
+2. 路由器发给**另一网络**上的主机A：用ARP找到本网络上一个路由器（网关）的硬件地址
+### DHCP协议
+1. 动态主机配置协议DHCP是**应用层**协议，使用**客户/服务器**方式，客户端和服务端通过**广播**方式进行交互，基于**UDP**
+2. DHCP用于分配IP地址，是一种动态分配主机IP地址的方法
+3. DHCP提供即插即用联网机制，允许地址重用，支持移动用户加入网络，支持在用地址续租
+#### DHCP工作流程
+1. 主机广播DHCP发现报文*主机寻找DHCP服务器，DHCP服务器选择IP地址*
+2. DHCP服务器广播DHCP提供报文*拟分配主机IP地址及相关配置*
+3. 主机广播DHCP请求报文*采用先到先得，广播使所有DHCP服务器都知道主机选用的IP地址*
+4. DHCP服务器广播DHCP确认报文*正式将IP地址分配给主机*
+### ICMP协议
+1. 网际控制报文协议ICMP：支持主机或路由器差错/异常报告或网络探询。（发送特定ICMP报文）
+2. ICMP报文：类型+代码+检验和+ICMP数据部分（IP数据报首部+8字节）
+#### ICMP差错报告报文
+1. 终点不可达（无法交付）
+2. 源点抑制（拥塞丢数据）
+3. 时间超过（TTL=0）
+4. 参数问题（首部字段有问题）
+5. 改变路由/重定向（存在更好的路由路径）
+##### 不发送情况
+1. ICMP差错报告报文
+2. 对第一个分片数据报片的所有后续数据报片
+3. 具有组播地址的数据报
+4. 具有特殊地质的数据报
+#### ICMP询问报文
+1. 回送请求和回答报文：测试目的站是否可达以及了解其相关状态
+2. 时间戳请求和回答报文
+3. 掩码地址请求和回答报文
+4. 路由询问和通告报文
+#### ICMP应用
+1. PING：测试两个主机间的连通性，使用ICMP回送请求和回答报文
+2. Traceroute：跟踪一个分组从源点到终点的路径，使用ICMP时间超过差错报告报文
+
+## IPv6
+### 产生原因
+1. 从根本上上解决地址耗尽问题
+2. 改进首部格式，达成快速处理和转发数据报的功能
+3. 支持QoS，指一个网络能够利用各种基础技术为指定的网络通信提供更好的服务能力
+### IPv6数据报格式
+#### 基本首部
+1. 40字节
+2. 版本：指明协议版本，4字节
+3. 优先级：区分数据报的类别和优先级，8字节
+4. 流标签：属于同一个流的数据报都具有同样的流标签，20字节
+5. 有效载荷长度：有效载荷部分*（扩展首部+数据部分）的长度
+6. 下一个首部：下一个扩展首部或上层协议首部，指向扩展首部1
+7. 跳数限制：相当于TTL，生存时间
+8. 源地址，128位
+9. 目的地址，128位
+#### 有效载荷
+1. 扩展首部
+2. 数据部分
+3. 加起来不能超过65535字节
+### 与IPv4的区别
+1. IPv6将地址从32位（4B）扩展到了128位（16B），更大的地址空间
+2. IPv6将IPv4的校验和字段车底移除，减少每跳的处理时间
+3. IPv6将IPv4的可选字段移除首部，变成了扩展首部，成为灵活的首部格式，路由器通常不对扩展首部进行检查，大大提高了路由器的处理效率
+4. IPv6支持即插即用（自动配置），不需要DHCP协议
+5. IPv6首部长度必须是8B的整数倍；IPv4首部长度必须是4B的整数倍
+6. IPv6只能在主机处分片，IPv4可以在路由器和主机处分片
+7. ICMPv6：附加报文类型“分组过大”
+8. IPv6支持资源的预分配，支持实施视像等要求，保证一定的带宽和时延的应用
+9. IPv6取消了协议字段，改成下一个首部字段
+10. IPv6取消了总长度字段，改用有效载荷长度字段
+11. IPv6取消了服务类型字段
+### IPv6地址表示形式
+1. 一般形式：冒号十六进制记法
+2. 压缩形式：前面有0的情况，删减0
+3. 零压缩：一连串连续的0可以被一堆冒号取代，双冒号表示法在一个地址中仅可出现一次
+### IPv6基本地址类型
+1. 单播：一对一通信，可做源地址和目的地址
+2. 多播：一对多通信，只能作为目的地址
+3. 任播：一对多中的一个通信，只能作为目的地址
+### IPv6项IPv4过渡策略
+#### 双栈协议
+1. 在一台设备上同时启用IPv4协议栈和IPv6协议栈
+2. 路由器：不同接口上分别配置了IPv4地址和IPv6地址
+3. 计算机：同时拥有IPv4地址和IPv6地址，并具备同时吃力这两个协议地址的功能
+#### 隧道技术
+1. 将其他协议的数据帧或包重新封装然后通过隧道发送
+
+## 路由协议
+### RIP协议
+1. RIP是一种分布式的基于距离向量的路由选择协议，是因特网的协议标准，最大优点是简单
+2. 要求网络中每一个路由器都维护从它自己到其他每一个目的网络的位移最佳距离记录（一组距离）
+3. 距离：通常为跳数，即从源端口到目的端口所经过的路由器个数，经过一个路由器跳数+1。
+    + 从一路由器到直接连接的网络距离为1
+    + RIP允许一条路由最多智能包含15个路由器（RIP只适用小的互联网）
+    + 距离16表示网络不可达
+4. 仅和相邻路由器交换信息
+5. 路由器交换的信息时自己的路由表
+6. 每30秒交换一次路由信息，然后路由器根据信息系更新路由表
+7. 若180s没收到邻居路由器的通告，则判定邻居没了，并更新自己路由表
+#### 距离向量算法
+1. 修改相邻路由器发来的RIP报文中所有表项：距离+1，下一跳改为邻居
+2. RIP报文填入路由表
+    + 路由器没有报文中的网络，直接填入
+    + 路由器中有报文中的网络
+        - 路由器中下一跳是邻居，直接更新（最新）
+        - 路由器中下一跳不是邻居，若路由表中距离更远则更新（最短）
+3. 180s没收到相邻路由器的更新路由表，则把邻居距离设置为16
+#### RIP报文
+![RIP报文.jpg](https://i.loli.net/2021/03/03/4SDJtadQWMZBguF.jpg)
+1. RIP是应用层协议，使用UDP传送数据
+2. 一个RIP报文最多可以包括25个路由，若超过则发送几个RIP报文
+#### RIP协议特点
+1. 慢收敛：当网络出现故障时，要经过比较长的时间才能将此信息传送到所有的路由器
