--- a/Computer Basics/Computer Network/计算机网络结构.md
+++ b/Computer Basics/Computer Network/计算机网络结构.md
@@ -794,7 +794,7 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
     + 有存储转发时延
     + 需要传输额外的信息量
     + 乱序到目的主机时，要对分组排序重组
-##### 数据报方式、虚电路方式
+##### 数据报方式
 1. 数据报方式：为网络层提供无连接服务
 2. 无连接服务：不事先为分组的传输确定传输路径，每个分组独立确定传输路径，不同分组传输路径可能不同
 3. 每个分组都携带源地址和目的地址
@@ -816,25 +816,6 @@ PS：面向连接（有确认过程的信息传输），无连接（直接传输
 4. 分组：网络层的传输单元，将过长的数据报切割而成
 5. 帧：数据链路层的传输单元，将分组加头加尾
 6. 比特流：物理层的传输单元
-### 路由算法与路由协议概述
-#### 路由算法
-1. 最佳路由：“最佳”只能是相对于某一种特定要求下得出的较为合理的选择而已
-##### 路由算法分类
-1. 静态路由算法（非自适应路由算法）：管理员手工配置路由信息
-    + 优点：简便、可靠，在负载稳定、拓扑变化不大的网络中运行效果好
-    + 缺点：路由更新慢。不适用大型网络
-2. 动态路由算法（自适应路由算法）：路由器之间彼此家坡缓信息，按照路由算法优化出路由表项
-    + 优点：路由更新快，适用大型网络，及时响应链路费用或拓扑变化
-    + 缺点：算法复杂，增加网络负担
-    + 全局性动态路由算法：链路状态路由算法OSPF
-        所有路由器掌握完整的网络拓扑和链路费用信息
-    + 分散性动态路由算法：距离向量路由算法RIP
-        路由只掌握物理相连的邻居及链路费用
-#### 路由协议
-1. 自治系统AS：在单一的技术管理下的一组路由器。而这些路由器使用一种AS内部的路由选择协议和共同的度量以确定分组在该AS内的路由，同时还使用一种AS之间的路由协议以确定在AS之间的路由
-    一个AS内的所有网络都数据一个行政单位来管辖，一个自治系统的所有路由器在本自治系统内都必须连通
-1. 内部网关协议IGP，一个AS内使用的，如RIP、OSPF
-2. 外部网关协议EGP，AS之间使用的，如BGP
 
 ## IP数据报
 ### IP数据报格式
@@ -1018,6 +999,25 @@ ARP高速缓存：IP地址与MAC地址的映射，用于网络层到数据链路
 1. 将其他协议的数据帧或包重新封装然后通过隧道发送
 
 ## 路由协议
+### 路由算法与路由协议概述
+#### 路由算法
+1. 最佳路由：“最佳”只能是相对于某一种特定要求下得出的较为合理的选择而已
+##### 路由算法分类
+1. 静态路由算法（非自适应路由算法）：管理员手工配置路由信息
+    + 优点：简便、可靠，在负载稳定、拓扑变化不大的网络中运行效果好
+    + 缺点：路由更新慢。不适用大型网络
+2. 动态路由算法（自适应路由算法）：路由器之间彼此家坡缓信息，按照路由算法优化出路由表项
+    + 优点：路由更新快，适用大型网络，及时响应链路费用或拓扑变化
+    + 缺点：算法复杂，增加网络负担
+    + 全局性动态路由算法：链路状态路由算法OSPF
+        所有路由器掌握完整的网络拓扑和链路费用信息
+    + 分散性动态路由算法：距离向量路由算法RIP
+        路由只掌握物理相连的邻居及链路费用
+#### 路由协议
+1. 自治系统AS：在单一的技术管理下的一组路由器。而这些路由器使用一种AS内部的路由选择协议和共同的度量以确定分组在该AS内的路由，同时还使用一种AS之间的路由协议以确定在AS之间的路由
+    一个AS内的所有网络都数据一个行政单位来管辖，一个自治系统的所有路由器在本自治系统内都必须连通
+1. 内部网关协议IGP，一个AS内使用的，如RIP、OSPF
+2. 外部网关协议EGP，AS之间使用的，如BGP
 ### RIP协议
 1. RIP是一种分布式的基于距离向量的路由选择协议，是因特网的协议标准，最大优点是简单
 2. 要求网络中每一个路由器都维护从它自己到其他每一个目的网络的位移最佳距离记录（一组距离）
@@ -1043,3 +1043,125 @@ ARP高速缓存：IP地址与MAC地址的映射，用于网络层到数据链路
 2. 一个RIP报文最多可以包括25个路由，若超过则发送几个RIP报文
 #### RIP协议特点
 1. 慢收敛：当网络出现故障时，要经过比较长的时间才能将此信息传送到所有的路由器
+### OSPF协议
+1. 开放最短路径优先OSPF协议，其中开放指不受某一家厂商控制，而是公开发表；使用了最短路径算法SPF
+2. OSPF最主要的特征：使用分布式的链路状态协议
+#### OSPF协议特点
+1. 使用洪泛法向自治系统内所有路由器发送信息
+2. 发送的信息位本路由器相邻的所有路由器的链路状态
+3. 只有当链路状态发生变化时，路由器猜想所有路由器洪泛发送信息
+4. 所有路由器建立一个链路状态数据库，即全网拓扑图
+5. 每隔30min，要刷新一次数据库中的链路状态
+6. 常用于互联网规模很大
+7. OSPF不存在坏消息传得慢的问题，收敛速度很快
+#### 链路状态路由算法
+1. 每个路由器发现他的邻居结点**hello问候分组**，并两节邻居节点的网络地址
+2. 设置到它的每个邻居的成本度量**metric**
+3. 构造**DD数据库描述分组**，向邻站给出自己的链路状态数据库中的额所有链路状态项目的摘要信息
+4. + 如果DD分组中的摘要都有，不作处理
+    + 如果存在没有或者更新的，则发送**LSR链路状态请求分组**，请求更新自己没有的和比自己更新的信息
+5. 收到邻站的LSR分组后，发送**LSU链路状态更新分组**进行更新
+6. 更新完毕后，邻站返回一个**LSAck链路状态确认分组**进行确认
+7. 是有Dijkstra根据自己的链路状态数据库构造到其他结点间的最短路径
+#### OSPF区域
+1. 区域：为了使用与规模很大的网络，OSPF将一个自制系统再划分为若干个更小的范围
+2. 每个范围有32位的区域标志符，一个区域不超过200个路由器
+3. 主干区域0.0.0.0
+4. 主干路由器、区域边界路由器
+#### OSPF分组
+直接使用IP数据报传送
+### BGP协议
+1. BGP发言人一般是BGP边界路由器
+#### BGP协议特点
+1. 与其他AS邻站发言人交换信息
+2. 交换网络可达性的信息：即要到达某个网络所要经过一系列AS
+3. 发生变化时更新变化的部分
+4. BGP支持CIDR，因此BGP的路由表应当包括目的网络前缀、下一跳路由器，以及到达该目的网络所要经过的各个自治系统序列
+#### BGP协议交换信息的过程
+BGP所交换的网络可达性的信息就是要达到某个网络所要经过的一系列AS。当BGP发言人互相贾环了网络可达性的信息后，各BGP发言人就根据所采用的策略从收到的路由信息中找出到达各AS的较好路由
+#### BGP协议报文格式
+1. BGP报文=BGP报文通用首部+BGP报文主体部分
+2. IP首部+TCP首部+BGP报文
+3. BGP是应用层协议，借助TCP传送
+#### BGP-4报文
+1. OPEN打开报文：用来与相邻的另一个BGP发言人建立关系，并认证发送方
+2. UPDATE更新报文：通告新路径或撤销原路径
+3. KEEPALIVE保活报文：在无UPDATE时，手气性证实邻站的连通性；也作为OPEN的确认
+4. NOTIFICATION通知报文：报告先前报文的差错；也被用于关闭连接
+![三种路由协议对比.jpg](https://i.loli.net/2021/03/05/oeRk4S9FMfTCPL6.jpg)
+
+## IP组播（多播）
+### IP数据报的三种传输方式
+1. 单播：用于发送数据包到单个目的地，且每发送一份单播报文都使用一个单播IP地址作为目的地址。是一种点对点传输方式
+2. 广播：发送数据包到同一广播域或子网内的所有设备的一种数据传输方式。是一种点对多点传输方式
+3. 组播（多播）：当网络中的某些用户需要特定数据时，组播数据发送者仅发送一次数据，借助组播路由协议为组播数据报建立组播分发树，被传输的数据到达距离用户端尽可能近的结点后才开始复制和分发，是一种点对多点传输方式
+### IP组播地址
+1. IP组播地址：让源设备能够将分组发送给一组设备。属于同一多播组的设备奖杯分配一个组播组IP地址
+2. 组播地址范围为224.0.0.0~239.255.255.255（D类地址），一个D类地址表示一个组播组。只能用作分组的目标地址。源地址总是单播地址
+3. 组播数据报是“尽最大努力交付”，不提供可靠交付，应用于UDP
+4. 对组播数据报不产生ICMP差错报文
+5. 并非所有D类地址都可以作为组播地址
+### 硬件组播
+1. IP地址与MAC地址有映射关系
+### IGMP协议
+1. IGMP网际组管理协议，让路由器指导本局域网上是否有主机（的进程）参加或推出了某个组播组
+#### IGMP工作的两个阶段
+1. 某主机要加入组播组时，该主机箱组播组的组播地址发送一个IGMP报文，声明自己要成为该组的成员
+2. 本地组播路由器收到IGMP报文后，要利用组播路由选择协议报这组成员关系发给因特网上的其他组播路由器
+3. 本地组播路由器周期性探寻本地局域网上的主机，以便指导这些主机是否还是组播组的成员
+4. + 有一个主机对某个组响应，则组播路由器认为该组活跃
+    + 探询几次后没有响应，组播路由器不再将这组的成员关系发给其他的组播路由器
+    + 成员关系：所连接的局域网中有无组播组成员
+### 组播路由选择协议
+1. 组播路由选择协议的目的是找出以源主机为根节点的组播转发树
+2. 基于链路状态的路由选择
+3. 基于距离-向量的路由选择
+4. 协议无关的组播（稀疏/密集）
+
+## 移动IP
+### 相关术语
+1. 移动IP技术：移动结点（计算机/服务器等）以固定的网络IP地址，实现跨越不同网段的漫游功能，保证基于网络IP的网络权限在漫游过程中不发生任何改变
+2. 移动结点：具有永久IP地址的移动设备
+3. 归属网络：一个移动结点拥有的旧居所
+4. 归属代理（本地代理）：在归属网络中代表移动结点执行移动管理功能的实体
+5. 外部代理（外地代理）：在外部网络中帮助移动结点完成移动管理功能的实体
+6. 永久地址（归属地址/主地址）：移动站点在归属网络中的原始地址
+7. 转交地址（辅地址）：移动站点在外部网络使用的临时地址
+### 通信过程
+#### 计算机A刚进入外部网络
+1. 在外部代理登记获得一个转交地址，离开时注销
+2. 外地代理向本地代理登记转交地址
+#### 计算机B向A发送数据报
+1. 本地代理截获数据报
+2. 本地代理再封装数据报，新数据宝目的地址是转交地址，发给外部代理（隧道）
+3. 外部代理拆封数据报并发送给A
+#### 计算机A向B发送数据报
+A用自己的主地址作为数据报源地址，用B的IP地址作为数据报的目的地址
+#### 计算机A移动到下一个网络
+1. 注销原有的转交地址
+2. 在新外部代理登记注册一个转交地址
+3. 新外部代理给本地代理发送新的转交地址（覆盖旧的）
+#### 计算机A回到归属网络
+1. A向本地代理注销转交地址
+
+## 网络层设备
+### 路由器
+1. 路由器是一种具有多个输入端口和多个输出端口的专用计算机，其任务是转发分组
+2. 路由器选择处理机：根据所选定的路由选择协议构造出路由表，同时经常或定期地和相邻路由器交换路由信息而不断地更新和维护路由表
+3. 交换结构：根据转发表（路由表得来）对分组进行转发
+#### 输入端口对线路上收到的分组的处理
+1. 从线路接收分组
+2. 物理层处理
+3. 数据链路层处理
+4. 网络层处理分组排队、查表和转发
+5. 会产生时延
+6. 输入端口中的查找和转发功能在路由器的交换功能中是最重要的
+#### 输出端口对线路上收到的分组的处理
+1. 网络层分组排队，缓存管理
+2. 数据链路层处理
+3. 物理层处理
+4. 若路由器处理分组的速率赶不上分组进入队列的速率，则后面无法缓存的分组被丢弃
+5. 路由器中的输入或输出队列产生移除是造成分组丢失的重要原因
+### 路由表与路由转发
+1. 路由表根据路由选择算法得出，主要用途是路由选择，用软件来实现
+2. 转发表是由路由表得来，可以用软件实现也可以用特殊的硬件来实现
